--- a/javascript/基础/06.面向对象编程.md
+++ b/javascript/基础/06.面向对象编程.md
@@ -20,7 +20,7 @@
 
 典型的面向对象编程语言（比如 C++ 和 Java），都有“类”（class）这个概念。所谓“类”就是对象的模板，对象就是“类”的实例。但是，==JavaScript 语言的对象体系，不是基于“类”的，而是基于构造函数（constructor）和原型链（prototype）==。
 
-==JavaScript 语言使用构造函数（constructor）作为对象的模板==。所谓”构造函数”，就是专门用来生成实例对象的函数。它就是对象的模板，描述实例对象的基本结构。一个构造函数，可以生成多个实例对象，这些实例对象都有相同的结构。
+==JavaScript 语言使用构造函数（constructor）作为对象的模板==。**所谓”构造函数”，就是专门用来生成实例对象的函数**。它就是对象的模板，描述实例对象的基本结构。一个构造函数，可以生成多个实例对象，这些实例对象都有相同的结构。
 
 构造函数就是一个普通的函数，但是有自己的特征和用法。
 
@@ -32,7 +32,7 @@ var Vehicle = function () {
 
 上面代码中，`Vehicle`就是构造函数。**为了与普通函数区别，构造函数名字的第一个字母通常大写**。
 
-构造函数的特点有两个。
+构造函数的特点有两个：
 
 - 函数体内部使用了`this`关键字，代表了所要生成的对象实例。
 - 生成对象的时候，必须使用`new`命令。
@@ -41,7 +41,7 @@ var Vehicle = function () {
 
 #### 1.3.1基本用法
 
-`new`命令的作用，就是执行构造函数，返回一个实例对象。
+`new`命令的作用：就是执行构造函数，返回一个实例对象。
 
 ```js
 var Vehicle = function () {
@@ -255,7 +255,7 @@ person2.greeting() // Hi! I'm 张三.
 
 前一章已经提到，`this`可以用在构造函数之中，表示实例对象。除此之外，`this`还可以用在别的场合。但不管是什么场合，`this`都有一个共同点：==它总是返回一个对象==。
 
-==简单说，`this`就是属性或方法“当前”所在的对象==。
+> 简单说，`this`就是属性或方法“当前”所在的对象。
 
 ```js
 this.property
@@ -279,7 +279,7 @@ person.describe()
 
 上面代码中，`this.name`表示`name`属性所在的那个对象。由于`this.name`是在`describe`方法中调用，而`describe`方法所在的当前对象是`person`，因此`this`指向`person`，`this.name`就是`person.name`。
 
-由于对象的属性可以赋给另一个对象，所以属性所在的当前对象是可变的，即`this`的指向是可变的。
+> 由于对象的属性可以赋给另一个对象，所以属性所在的当前对象是可变的，即`this`的指向是可变的。
 
 ```js
 var A = {
@@ -323,7 +323,7 @@ B.describe() // "姓名：李四"
 
 上面代码中，函数`f`内部使用了`this`关键字，随着`f`所在的对象不同，`this`的指向也不同。
 
-==只要函数被赋给另一个变量，`this`的指向就会变==。
+> 只要函数被赋给另一个变量，`this`的指向就会变。
 
 ```js
 var A = {
@@ -367,7 +367,7 @@ var obj = { foo:  5 };
 
 上面的代码将一个对象赋值给变量`obj`。JavaScript 引擎会先在内存里面，生成一个对象`{ foo: 5 }`，然后把这个对象的内存地址赋值给变量`obj`。也就是说，变量`obj`是一个地址（reference）。后面如果要读取`obj.foo`，引擎先从`obj`拿到内存地址，然后再从该地址读出原始的对象，返回它的`foo`属性。
 
-原始的对象以字典结构保存，每一个属性名都对应一个属性描述对象。举例来说，上面例子的`foo`属性，实际上是以下面的形式保存的。
+**原始的对象以字典结构保存，每一个属性名都对应一个属性描述对象**。举例来说，上面例子的`foo`属性，实际上是以下面的形式保存的。
 
 ```js
 {
@@ -399,7 +399,7 @@ var obj = { foo: function () {} };
 }
 ```
 
-由于函数是一个单独的值，所以它可以在不同的环境（上下文）执行。
+> 由于函数是一个单独的值，所以它可以在不同的环境（上下文）执行。
 
 ```js
 var f = function () {};
@@ -456,7 +456,7 @@ obj.f() // 2
 
 `this`主要有以下几个使用场合。
 
-**（1）全局环境**
+#### 2.3.1全局环境
 
 全局环境使用`this`，它指的就是顶层对象`window`。
 
@@ -471,9 +471,9 @@ f() // true
 
 上面代码说明，==不管是不是在函数内部，只要是在全局环境下运行，`this`就是指顶层对象`window`。==
 
-**2）构造函数**
+#### 2.3.2构造函数
 
-构造函数中的`this`，指的是实例对象。
+> 构造函数中的`this`，指的是实例对象。
 
 ```js
 var Obj = function (p) {
@@ -488,9 +488,9 @@ var o = new Obj('Hello World!');
 o.p // "Hello World!"
 ```
 
-**（3）对象的方法**
+#### 2.3.3对象的方法
 
-如果对象的方法里面包含`this`，`this`的指向就是方法运行时所在的对象。该方法赋值给另一个对象，就会改变`this`的指向。
+> 如果对象的方法里面包含`this`，`this`的指向就是方法运行时所在的对象。该方法赋值给另一个对象，就会改变`this`的指向。
 
 但是，这条规则很不容易把握。请看下面的代码。
 
@@ -517,7 +517,7 @@ obj.foo() // obj
 (1, obj.foo)() // window
 ```
 
-上面代码中，`obj.foo`就是一个值。这个值真正调用的时候，运行环境已经不是`obj`了，而是全局环境，所以`this`不再指向`obj`。
+**上面代码中，`obj.foo`就是一个值。这个值真正调用的时候，运行环境已经不是`obj`了，而是全局环境，所以`this`不再指向`obj`。**
 
 可以这样理解，JavaScript 引擎内部，`obj`和`obj.foo`储存在两个内存地址，称为地址一和地址二。`obj.foo()`这样调用时，是从地址一调用地址二，因此地址二的运行环境是地址一，`this`指向`obj`。但是，上面三种情况，都是直接取出地址二进行调用，这样的话，运行环境就是全局环境，因此`this`指向全局环境。上面三种情况等同于下面的代码。
 
@@ -542,7 +542,7 @@ obj.foo() // obj
 })()
 ```
 
-如果`this`所在的方法不在对象的第一层，这时`this`只是指向当前一层的对象，而不会继承更上面的层。
+> 如果`this`所在的方法不在对象的第一层，这时`this`只是指向当前一层的对象，而不会继承更上面的层。
 
 ```js
 var a = {
@@ -762,7 +762,7 @@ $('#button').on('click', o.f);
 
 ### 2.5绑定 this 的方法
 
-`this`的动态切换，固然为 JavaScript 创造了巨大的灵活性，但也使得编程变得困难和模糊。有时，需要把`this`固定下来，避免出现意想不到的情况。JavaScript 提供了`call`、`apply`、`bind`这三个方法，来切换/固定`this`的指向。
+`this`的动态切换，固然为 JavaScript 创造了巨大的灵活性，但也使得编程变得困难和模糊。有时，需要把`this`固定下来，避免出现意想不到的情况。**JavaScript 提供了`call`、`apply`、`bind`这三个方法，来切换/固定`this`的指向**。
 
 #### 2.5.1.`Function.prototype.call()`
 
@@ -781,7 +781,7 @@ f.call(obj) === obj // true
 
 上面代码中，全局环境运行函数`f`时，`this`指向全局环境（浏览器为`window`对象）；`call`方法可以改变`this`的指向，指定`this`指向对象`obj`，然后在对象`obj`的作用域中运行函数`f`。
 
-`call`方法的参数，应该是一个对象。如果参数为空、`null`和`undefined`，则默认传入全局对象。
+> `call`方法的参数，应该是一个对象。如果参数为空、`null`和`undefined`，则默认传入全局对象。
 
 ```js
 var n = 123;
@@ -800,7 +800,7 @@ a.call(obj) // 456
 
 上面代码中，`a`函数中的`this`关键字，如果指向全局对象，返回结果为`123`。如果使用`call`方法将`this`关键字指向`obj`对象，返回结果为`456`。可以看到，如果`call`方法没有参数，或者参数为`null`或`undefined`，则等同于指向全局对象。
 
-如果`call`方法的参数是一个原始值，那么这个原始值会自动转成对应的包装对象，然后传入`call`方法。
+> 如果`call`方法的参数是一个原始值，那么这个原始值会自动转成对应的包装对象，然后传入`call`方法。
 
 ```js
 var f = function () {
@@ -819,7 +819,7 @@ f.call(5)
 func.call(thisValue, arg1, arg2, ...)
 ```
 
-`call`的第一个参数就是`this`所要指向的那个对象，后面的参数则是函数调用时所需的参数。
+> `call`的第一个参数就是`this`所要指向的那个对象，后面的参数则是函数调用时所需的参数。
 
 ```js
 function add(a, b) {
@@ -831,7 +831,7 @@ add.call(this, 1, 2) // 3
 
 上面代码中，`call`方法指定函数`add`内部的`this`绑定当前环境（对象），并且参数为`1`和`2`，因此函数`add`运行后得到`3`。
 
-==`call`方法的一个应用是调用对象的原生方法==。
+> ==`call`方法的一个应用是调用对象的原生方法==。
 
 ```js
 var obj = {};
@@ -850,7 +850,7 @@ Object.prototype.hasOwnProperty.call(obj, 'toString') // false
 
 #### 2.5.2.`Function.prototype.apply()`
 
-`apply`方法的作用与`call`方法类似，也是改变`this`指向，然后再调用该函数。唯一的区别就是，它接收一个数组作为函数执行时的参数，使用格式如下。
+`apply`方法的作用与`call`方法类似，也是改变`this`指向，然后再调用该函数。**唯一的区别就是，它接收一个数组作为函数执行时的参数**，使用格式如下。
 
 ```js
 func.apply(thisValue, [arg1, arg2, ...])
@@ -966,7 +966,7 @@ print() // 1481869925657
 
 上面代码中，`bind`方法将`getTime`方法内部的`this`绑定到`d`对象，这时就可以安全地将这个方法赋值给其他变量了。
 
-`bind`方法的参数就是所要绑定`this`的对象，下面是一个更清晰的例子。
+> `bind`方法的参数就是所要绑定`this`的对象，下面是一个更清晰的例子。
 
 ```js
 var counter = {
@@ -1180,9 +1180,9 @@ bind(f, o)() // 123
 
 面向对象编程很重要的一个方面，就是对象的继承。A 对象通过继承 B 对象，就能直接拥有 B 对象的所有属性和方法。这对于代码的复用是非常有用的。
 
-大部分面向对象的编程语言，都是通过“类”（class）实现对象的继承。传统上，JavaScript 语言的继承不通过 class，而是通过“原型对象”（prototype）实现。
+大部分面向对象的编程语言，都是通过“类”（class）实现对象的继承。**传统上，JavaScript 语言的继承不通过 class，而是通过“原型对象”（prototype）实现**。
 
-ES6 引入了 class 语法，基于 class 的继承不在这个教程介绍
+ES6 引入了 class 语法，基于 class 的继承不在这个教程介绍。
 
 ### 3.1原型对象概述
 
@@ -1204,7 +1204,7 @@ cat1.color // '白色'
 
 上面代码中，`Cat`函数是一个构造函数，函数内部定义了`name`属性和`color`属性，所有实例对象（上例是`cat1`）都会生成这两个属性，即这两个属性会定义在实例对象上面。
 
-通过构造函数为实例对象定义属性，虽然很方便，但是有一个缺点。同一个构造函数的多个实例之间，无法共享属性，从而造成对系统资源的浪费。
+> 通过构造函数为实例对象定义属性，虽然很方便，但是有一个缺点。同一个构造函数的多个实例之间，无法共享属性，从而造成对系统资源的浪费。
 
 ```js
 function Cat(name, color) {
@@ -1228,9 +1228,9 @@ cat1.meow === cat2.meow
 
 #### 3.1.2.prototype属性的作用
 
-JavaScript 继承机制的设计思想就是，原型对象的所有属性和方法，都能被实例对象共享。也就是说，如果属性和方法定义在原型上，那么所有实例对象就能共享，不仅节省了内存，还体现了实例对象之间的联系。
+JavaScript 继承机制的设计思想就是，**原型对象的所有属性和方法，都能被实例对象共享**。也就是说，如果属性和方法定义在原型上，那么所有实例对象就能共享，不仅节省了内存，还体现了实例对象之间的联系。
 
-下面，先看怎么为对象指定原型。JavaScript 规定，每个函数都有一个`prototype`属性，指向一个对象。
+下面，先看怎么为对象指定原型。==JavaScript 规定，每个函数都有一个`prototype`属性，指向一个对象。==
 
 ```js
 function f() {}
@@ -1265,9 +1265,9 @@ cat1.color // "yellow"
 cat2.color // "yellow"
 ```
 
-上面代码中，原型对象的`color`属性的值变为`yellow`，两个实例对象的`color`属性立刻跟着变了。这是因为实例对象其实没有`color`属性，都是读取原型对象的`color`属性。也就是说，当实例对象本身没有某个属性或方法的时候，它会到原型对象去寻找该属性或方法。这就是原型对象的特殊之处。
+上面代码中，原型对象的`color`属性的值变为`yellow`，两个实例对象的`color`属性立刻跟着变了。这是因为实例对象其实没有`color`属性，都是读取原型对象的`color`属性。==也就是说，当实例对象本身没有某个属性或方法的时候，它会到原型对象去寻找该属性或方法。==这就是原型对象的特殊之处。
 
-如果实例对象自身就有某个属性或方法，它就不会再去原型对象寻找这个属性或方法。
+> 如果实例对象自身就有某个属性或方法，它就不会再去原型对象寻找这个属性或方法。
 
 ```js
 cat1.color = 'black';
@@ -1279,7 +1279,7 @@ Animal.prototype.color // 'yellow';
 
 上面代码中，实例对象`cat1`的`color`属性改为`black`，就使得它不再去原型对象读取`color`属性，后者的值依然为`yellow`。
 
-总结一下，原型对象的作用，就是定义所有实例对象共享的属性和方法。这也是它被称为原型对象的原因，而实例对象可以视作从原型对象衍生出来的子对象。
+> 总结一下，原型对象的作用，就是定义所有实例对象共享的属性和方法。这也是它被称为原型对象的原因，而实例对象可以视作从原型对象衍生出来的子对象。
 
 ```js
 Animal.prototype.walk = function () {
