--- a/面试/前端基础拾遗90问.md
+++ b/面试/前端基础拾遗90问.md
@@ -4,11 +4,11 @@
 
 ## 1. 如何在ES5环境下实现let
 
-这个问题实质上是在回答`let`和`var`有什么区别，对于这个问题，我们可以直接查看`babel`转换前后的结果，看一下在循环中通过`let`定义的变量是如何解决变量提升的问题
+这个问题实质上是在回答`let`和`var`有什么区别，对于这个问题，我们可以直接查看`babel`转换前后的结果，看一下在循环中通过`let`定义的变量是如何解决变量提升的问题。
 
 ![img](https://gitee.com/xuxujian/webNoteImg/raw/master/webpack/1714616e2fd53bf8.jpeg)
 
-babel在let定义的变量前加了道下划线，避免在块级作用域外访问到该变量，除了对变量名的转换，我们也可以通过自执行函数来模拟块级作用域
+babel在`let`定义的变量前加了道下划线，避免在块级作用域外访问到该变量，除了对变量名的转换，我们也可以通过自执行函数来模拟块级作用域。
 
 ```js
 (function(){
@@ -42,8 +42,6 @@ Object.defineProperty(obj, prop, desc)
 |    prop    |  要定义或修改的属性的名称  |
 | descriptor | 将被定义或修改的属性描述符 |
 
-
-
 |  属性描述符  | 说明                                                         |  默认值   |
 | :----------: | :----------------------------------------------------------- | :-------: |
 |    value     | 该属性对应的值。可以是任何有效的 JavaScript 值（数值，对象，函数等）。默认为 undefined | undefined |
@@ -72,7 +70,7 @@ obj = {}                //无法赋值新对象
 
 ## 3. 手写call()
 
-`call() 方法`使用一个指定的 this 值和单独给出的一个或多个参数来调用一个函数.
+`call() 方法`使用一个指定的 this 值和单独给出的一个或多个参数来调用一个函数。
 
 ```js
 function.call(thisArg, arg1, arg2, ...)
@@ -121,7 +119,7 @@ foo.myCall(obj)     // 输出'写代码像蔡徐抻'
 
 ## 4. 手写apply()
 
-apply() 方法调用一个具有给定this值的函数，以及作为一个数组（或类似数组对象）提供的参数。
+`apply()` 方法调用一个具有给定this值的函数，以及作为一个数组（或类似数组对象）提供的参数。
 
 ```js
 func.apply(thisArg, [argsArray])
@@ -192,7 +190,11 @@ foo.myBind(obj, 'a', 'b', 'c')()    //输出写代码像蔡徐抻 ['a', 'b', 'c'
 
 ## 6. 手写一个防抖函数
 
-防抖，即`短时间内大量触发同一事件，只会执行一次函数`，实现原理为`设置一个定时器，约定在xx毫秒后再触发事件处理，每次触发事件都会重新设置计时器，直到xx毫秒内无第二次操作`，防抖常用于搜索框/滚动条的监听事件处理，如果不做防抖，每输入一个字/滚动屏幕，都会触发事件处理，造成性能浪费。
+防抖：即短时间内大量触发同一事件，只会执行一次函数。
+
+实现原理：设置一个定时器，约定在xx毫秒后再触发事件处理，每次触发事件都会重新设置计时器，直到xx毫秒内无第二次操作。
+
+防抖常用于搜索框/滚动条的监听事件处理，如果不做防抖，每输入一个字/滚动屏幕，都会触发事件处理，造成性能浪费。
 
 ```js
 function debounce(func, wait) {
@@ -211,7 +213,11 @@ function debounce(func, wait) {
 
 ## 7. 手写一个节流函数
 
-防抖是`延迟执行`，而节流是`间隔执行`，函数节流即`每隔一段时间就执行一次`，实现原理为`设置一个定时器，约定xx毫秒后执行事件，如果时间到了，那么执行函数并重置定时器`，和防抖的区别在于，防抖每次触发事件都重置定时器，而节流在定时器到时间后再清空定时器
+防抖是`延迟执行`，而节流是`间隔执行`，函数节流即`每隔一段时间就执行一次`。
+
+实现原理：设置一个定时器，约定xx毫秒后执行事件，如果时间到了，那么执行函数并重置定时器。
+
+区别：防抖每次触发事件都重置定时器，而节流在定时器到时间后再清空定时器
 
 ```js
 function throttle(func, wait) {
@@ -253,24 +259,22 @@ function throttle(func, wait) {
 
 对于`[1, [1,2], [1,2,3]]`这样多层嵌套的数组，我们如何将其扁平化为`[1, 1, 2, 1, 2, 3]`这样的一维数组呢：
 
-> **1.ES6的flat()**
+> 1. ES6的`flat()`
 
 ```js
 const arr = [1, [1,2], [1,2,3]]
 arr.flat(Infinity)  // [1, 1, 2, 1, 2, 3]
 ```
 
-> **2.序列化后正则**
+> 2. 序列化后正则
 
 ```js
 const arr = [1, [1,2], [1,2,3]]
 const str = `[${JSON.stringify(arr).replace(/(\[|\])/g, '')}]`
 JSON.parse(str)   // [1, 1, 2, 1, 2, 3]
-
 ```
 
-> **3.递归**
-> 对于树状结构的数据，最直接的处理方式就是递归
+> 3. 递归：对于树状结构的数据，最直接的处理方式就是递归
 
 ```js
 const arr = [1, [1,2], [1,2,3]]
@@ -283,10 +287,9 @@ function flat(arr) {
 }
 
 flat(arr) // [1, 1, 2, 1, 2, 3]
-
 ```
 
-> **4.reduce()递归**
+> 4. `reduce()`递归
 
 ```js
 const arr = [1, [1,2], [1,2,3]]
@@ -297,10 +300,9 @@ function flat(arr) {
 }
 
 flat(arr)  // [1, 1, 2, 1, 2, 3]
-
 ```
 
-> **5.迭代+展开运算符**
+> 5. 迭代+展开运算符
 
 ```js
 // 每次while都会合并一层的元素，这里第一次合并结果为[1, 1, 2, 1, 2, 3, [4,4,4]]
@@ -311,7 +313,6 @@ while (arr.some(Array.isArray)) {
 }
 
 console.log(arr)  // [1, 1, 2, 1, 2, 3, 4, 4, 4]
-
 ```
 
 ## 9. 手写一个Promise
@@ -324,7 +325,7 @@ console.log(arr)  // [1, 1, 2, 1, 2, 3, 4, 4, 4]
 
 # JS面向对象
 
-在JS中一切皆对象，但JS并不是一种真正的面向对象(OOP)的语言，因为它缺少`类(class)`的概念。虽然ES6引入了`class`和`extends`，使我们能够轻易地实现类和继承。但JS并不存在真实的类，JS的类是通过函数以及原型链机制模拟的，本小节的就来探究如何在ES5环境下利用函数和原型链实现JS面向对象的特性
+在JS中一切皆对象，但JS并不是一种真正的面向对象(OOP)的语言，因为它缺少`类(class)`的概念。虽然ES6引入了`class`和`extends`，使我们能够轻易地实现类和继承。但JS并不存在真实的类，**JS的类是通过函数以及原型链机制模拟的**，本小节的就来探究如何在ES5环境下利用函数和原型链实现JS面向对象的特性。
 
 在开始之前，我们先回顾一下原型链的知识，后续`new`和`继承`等实现都是基于原型链机制。很多介绍原型链的资料都能写上洋洋洒洒几千字，但我觉得读者们不需要把原型链想太复杂，容易把自己绕进去，其实在我看来，原型链的核心只需要记住三点：
 
@@ -362,7 +363,6 @@ function Foo(name) {
 const newObj = myNew(Foo, 'zhangsan')
 console.log(newObj)                 // Foo {name: "zhangsan"}
 console.log(newObj instanceof Foo)  // true
-
 ```
 
 ## 2. ES5如何实现继承
