--- a/CSS/01.CSS教程.md
+++ b/CSS/01.CSS教程.md
@@ -176,31 +176,31 @@ h3 { color: red; }
 
 ### 3.2基础选择器
 
-通配符选择器(==优先级为：0==)
+通配符选择器(**优先级为：0**):
 
 ```css
 * { margin: 0; padding: 0; border: none; }
 ```
 
-元素选择器(==优先级为：1==)
+元素选择器(**优先级为：1**):
 
 ```css
 body { background: #eee; }
 ```
 
-类选择器(==优先级为：10==)
+类选择器(**优先级为：10**):
 
 ```css
 .list { list-style: square; }
 ```
 
-ID选择器(==优先级为：100==)
+ID选择器(**优先级为：100**):
 
 ```css
 #list { width: 500px; margin: 0 auto; }
 ```
 
-选择器分组
+选择器分组:
 
 ```css
 h1,h2,h3{ color: pink; }
@@ -213,7 +213,7 @@ h1,h2,h3{ color: pink; }
 
 用来选择元素或元素组的**子孙后代**
 
-其写法就是把外层标签写在前面，内层标签写在后面，中间用**空格**分隔，先写父亲爷爷，在写儿子孙子。 
+其写法就是把外层标签写在前面，内层标签写在后面，中间用**空格**分隔，先写父亲爷爷，再	写儿子孙子。 
 
 语法：
 
@@ -239,7 +239,7 @@ h1,h2,h3{ color: pink; }
 #wrap > .inner {color: pink;}
 ```
 
-==也可称为直接后代选择器,此类选择器只能匹配到直接后代，不能匹配到深层次的后代元素。==
+> 也可称为直接后代选择器，此类选择器只能匹配到直接后代，不能匹配到深层次的后代元素。
 
 #### 3.3.3交集选择器
 
@@ -254,7 +254,7 @@ h1,h2,h3{ color: pink; }
 h3.class{ color:red }
 ```
 
-==其中第一个为标签选择器，第二个为class选择器，两个选择器之间**不能有空格**==，如`h3.special`。
+> 其中第一个为标签选择器，第二个为class选择器，两个选择器之间**不能有空格**，如`h3.special`。
 
 交集选择器 是 **并且**的意思。  即...又...的意思
 
@@ -340,12 +340,6 @@ span[class*=black] {
 - `:visited` 表示作为超链接，并指向一个==已访问==的链接
 - `:target`代表一个特殊的元素，它的id是URI的片段标识符
 
-示例：
-
-```css
-
-```
-
 只有下列的属性才能被应用到==已访问链接==：
 
 ```css
@@ -356,18 +350,53 @@ span[class*=black] {
 }
 ```
 
+示例：
+
+```css
+/*未访问链接*/
+a:link{
+  color:#333;
+}
+/*已经访问的链接*/
+a:visited{
+  color:orange;
+}
+```
+
 #### 3.5.2动态伪类
 
 `注意`:`:hover`，`:active`基本可以==作用于所有==的元素！
 
-- `:hover`		表示悬浮到元素上
-- `:active`		表示匹配被用户激活的元素（点击按住时）
+- `:hover`：表示悬浮到元素上
+- `:active`：表示匹配被用户激活的元素（点击按住时）
+
+示例：
 
 ```css
-/*
-由于a标签的:link和:visited可以覆盖了所有a标签的状态，并且只能用在a标签上。所以当:link，:visited，:hover，:active同时出现在a标签身上时 :link和:visited不能放在最后！！！
-*/
+/*鼠标经过*/
+a:hover{
+  color:red;
+}
+/*当我们点击的时候（按下鼠标，别松开的时候）*/
+a:active{
+  color:green;
+}
 ```
+
+> 注意：由于a标签的:link和:visited可以覆盖了所有a标签的状态，并且只能用在a标签上。所以当:link，:visited，:hover，:active同时出现在a标签身上时 :link和:visited不能放在最后！！！
+
+必须按照以下顺序编写：
+
+```css
+ a:link      /* 未访问的链接 */
+ a:visited   /* 已访问的链接 */
+ a:hover     /* 鼠标移动到链接上 */
+ a:active    /* 选定的链接 */
+```
+
+注意：
+
+- 因为叫链接伪类，所以都是 利用交集选择器  `a:link ` `  a:hover  `
 
 #### 3.5.3表单相关伪类
 
