--- a/javascript/基础/05.标准库.md
+++ b/javascript/基础/05.标准库.md
@@ -1367,7 +1367,7 @@ arr // ['a', 'b']
 [].pop() // undefined
 ```
 
-`push`和`pop`结合使用，就构成了后进先出的栈结构（stack）。
+`push`和`pop`结合使用，就构成了**后进先出的栈结构**（stack）。
 
 ```js
 var arr = [];
@@ -1407,7 +1407,7 @@ list // []
 
 上面代码通过`list.shift()`方法每次取出一个元素，从而遍历数组。它的前提是数组元素不能是`0`或任何布尔值等于`false`的元素，因此这样的遍历不是很可靠。
 
-`push()`和`shift()`结合使用，就构成了先进先出的队列结构（queue）。
+`push()`和`shift()`结合使用，就构成了**先进先出的队列结构**（queue）。
 
 **`unshift()`方法用于在数组的第一个位置添加元素**，并返回添加新元素后的数组长度。注意，该方法会改变原数组。
 
@@ -1448,7 +1448,7 @@ a.join() // "1,2,3,4"
 // 'a--b'
 ```
 
-通过`call`方法，这个方法也可以用于字符串或类似数组的对象。
+> **通过`call`方法，这个方法也可以用于字符串或类似数组的对象。**
 
 ```js
 Array.prototype.join.call('hello', '-')
@@ -1549,7 +1549,7 @@ a.slice(4) // []
 a.slice(2, 1) // []
 ```
 
-> `slice`方法的一个重要应用，是将类似数组的对象转为真正的数组。
+> **`slice`方法的一个重要应用，是将类似数组的对象转为真正的数组。**
 
 ```js
 Array.prototype.slice.call({ 0: 'a', 1: 'b', length: 2 })
@@ -1569,7 +1569,7 @@ Array.prototype.slice.call(arguments);
 arr.splice(start, count, addElement1, addElement2, ...);
 ```
 
-`splice`的第一个参数是删除的起始位置（从0开始），第二个参数是被删除的元素个数。如果后面还有更多的参数，则表示这些就是要被插入数组的新元素。
+**`splice`的第一个参数是删除的起始位置（从0开始），第二个参数是被删除的元素个数**。如果后面还有更多的参数，则表示这些就是要被插入数组的新元素。
 
 ```js
 var a = ['a', 'b', 'c', 'd', 'e', 'f'];
@@ -1713,7 +1713,7 @@ var arr = ['a', 'b', 'c'];
 
 上面代码通过`map`方法的第二个参数，将回调函数内部的`this`对象，指向`arr`数组。
 
-如果数组有空位，`map`方法的回调函数在这个位置不会执行，会跳过数组的空位。
+**如果数组有空位，`map`方法的回调函数在这个位置不会执行，会跳过数组的空位**。
 
 ```js
 var f = function (n) { return 'a' };
@@ -1826,7 +1826,7 @@ arr.filter(Boolean)
 [1, 2, 3, 4, 5].filter(function (elem, index, arr) {
   return index % 2 === 0;
 });
-// [1, 3, 5]
+// [2，4]
 ```
 
 上面代码返回偶数位置的成员组成的新数组。
@@ -2031,7 +2031,7 @@ users
 
 ### 4.1定义
 
-对象是 JavaScript 语言最主要的数据类型，三种原始类型的值——数值、字符串、布尔值——**在一定条件下，也会自动转为对象，也就是原始类型的包装对象（wrapper）**。
+对象是 JavaScript 语言最主要的数据类型，**三种原始类型的值——数值、字符串、布尔值——在一定条件下，也会自动转为对象，也就是原始类型的包装对象（wrapper）**。
 
 所谓包装对象，指的是与数值、字符串、布尔值分别相对应的`Number`、`String`、`Boolean`三个原生对象。这三个原生对象可以把原始类型的值变成（包装成）对象。
 
@@ -2051,7 +2051,7 @@ v3 === true // false
 
 上面代码中，基于原始类型的值，生成了三个对应的包装对象。可以看到，`v1`、`v2`、`v3`都是对象，且与对应的简单类型值不相等。
 
-包装对象的设计目的:**首先是使得“对象”这种类型可以覆盖 JavaScript 所有的值**，整门语言有一个通用的数据模型，其次是**使得原始类型的值也有办法调用自己的方法**。
+> 包装对象的设计目的:**首先是使得*对象*这种类型可以覆盖 JavaScript 所有的值**，整门语言有一个通用的数据模型，其次是**使得原始类型的值也有办法调用自己的方法**。
 
 `Number`、`String`和`Boolean`这三个原生对象，如果不作为构造函数调用（即调用时不加`new`），而是作为普通函数调用，常常用于将任意类型的值转为数值、字符串和布尔值。
 
@@ -2102,7 +2102,7 @@ new Boolean(true).toString() // "true"
 'abc'.length // 3
 ```
 
-上面代码中，`abc`是一个字符串，本身不是对象，不能调用`length`属性。JavaScript 引擎自动将其转为包装对象，在这个对象上调用`length`属性。调用结束后，这个临时对象就会被销毁。这就叫原始类型与实例对象的自动转换。
+上面代码中，`abc`是一个字符串，本身不是对象，不能调用`length`属性。JavaScript 引擎自动将其转为包装对象，在这个对象上调用`length`属性。调用结束后，这个临时对象就会被销毁。这就叫**原始类型与实例对象的自动转换**。
 
 ```js
 var str = 'abc';
@@ -2168,7 +2168,7 @@ b.valueOf() // true
 
 上面代码的变量`b`是一个`Boolean`对象的实例，它的类型是对象，值为布尔值`true`。
 
-> 注意，`false`对应的包装对象实例，布尔运算结果也是`true`。
+> 注意：`false`对应的包装对象实例，布尔运算结果也是`true`。
 
 ```js
 if (new Boolean(false)) {
@@ -2187,6 +2187,7 @@ if (new Boolean(false).valueOf()) {
 `Boolean`对象除了可以作为构造函数，还可以单独使用，将任意值转为布尔值。这时`Boolean`就是一个单纯的工具方法。
 
 ```js
+//只有以下6种转为false，其他都转为true
 Boolean(undefined) // false
 Boolean(null) // false
 Boolean(0) // false
@@ -2204,7 +2205,7 @@ Boolean(/foo/) // true
 
 上面代码中几种得到`true`的情况，都值得认真记住。
 
-> 顺便提一下，使用双重的否运算符（`!`）也可以将任意值转为对应的布尔值。
+> **顺便提一下，使用双重的否运算符（`!`）也可以将任意值转为对应的布尔值。**
 
 ```js
 !!undefined // false
@@ -2247,7 +2248,7 @@ if (new Boolean(null)) {
 
 `Number`对象是数值对应的包装对象，可以作为构造函数使用，也可以作为工具函数使用。
 
-==作为构造函数时，它用于生成值为数值的对象==。
+**作为构造函数时，它用于生成值为数值的对象**。
 
 ```js
 var n = new Number(1);
@@ -2256,7 +2257,7 @@ typeof n // "object"
 
 上面代码中，`Number`对象作为构造函数使用，返回一个值为`1`的对象。
 
-==作为工具函数时，它可以将任何类型的值转为数值==。
+**作为工具函数时，它可以将任何类型的值转为数值**。
 
 ```js
 Number(true) // 1
@@ -2513,7 +2514,7 @@ s2.valueOf() // "abc"
 
 上面代码中，变量`s1`是字符串，`s2`是对象。由于`s2`是字符串对象，`s2.valueOf`方法返回的就是它所对应的原始字符串。
 
-==字符串对象是一个类似数组的对象（很像数组，但不是数组）==。
+**字符串对象是一个类似数组的对象（很像数组，但不是数组）**。
 
 ```js
 new String('abc')
@@ -2524,7 +2525,7 @@ new String('abc')
 
 上面代码中，字符串`abc`对应的字符串对象，有数值键（`0`、`1`、`2`）和`length`属性，所以可以像数组那样取值。
 
-除了用作构造函数，`String`对象还可以当作工具方法使用，==将任意类型的值转为字符串==。
+除了用作构造函数，`String`对象还可以当作工具方法使用，**将任意类型的值转为字符串**。
 
 ```js
 String(true) // "true"
