--- a/CSS/01.CSS教程.md
+++ b/CSS/01.CSS教程.md
@@ -1,4 +1,4 @@
-## 1.css基本使用
+1.css基本使用
 
 **样式表**由**规则**组成，**规则**由**选择器**和**声明块**组成，声明块由一条一条声明组成，声明由合法的属性名和属性值组成。
 
@@ -1152,7 +1152,8 @@ webkit内核独有的属性
 语法：
 
 ```css
-background-color:颜色值;   默认的值是 transparent  透明的
+background-color:颜色值; 
+/*默认值：transparent(透明的)*/
 ```
 
 示例：
@@ -1322,6 +1323,7 @@ background-position : position || position
 
 ```css
 	body {
+    	/*让浏览器出现滚动条*/
 			height: 3000px;
 			background-image: url(images/sms.jpg);
 			background-repeat: no-repeat;
@@ -1339,26 +1341,23 @@ background-position : position || position
 			background-color: pink;
 			background-image: url(images/sina.png);
 			background-repeat: no-repeat;
-  /*距左侧10px，垂直居中*/
+  		/*距左侧10px，垂直居中*/
 			background-position: 10px center;
 		}
 ```
 
 效果图：
 
-
+<img src="D:%5CGitHub%5CwebNote%5CCSS%5CCSS%E6%95%99%E7%A8%8B.assets%5Cimage-20200326205706214.png" alt="image-20200326205706214" style="zoom:100%;" />
 
 ### 6.5背景固定
 
 决定背景是在视口中固定的还是随包含它的区块滚动的。
 
-默认值：scroll 不可继承 
-
-值：
-fixed
-    此关键字表示背景相对于视口固定。即使一个元素拥有滚动机制，背景也不会随着元素的内容滚动 。
-scroll
-    此关键字表示背景相对于元素本身固定， 而不是随着它的内容滚动
+| 参数   |                作用                |
+| ------ | :--------------------------------: |
+| scroll | 背景图像是随对象内容滚动（默认值） |
+| fixed  |            背景图像固定            |
 
 语法：
 
@@ -1375,12 +1374,10 @@ body {
 			background-repeat: no-repeat;
 			/*这种写法一般是我们以后 超大背景图片的做法 背景定位*/
 			background-position: center top;
-			/*背景固定的,*/
+			/*背景固定的*/
 			background-attachment: fixed;
 		}
 ```
-
-
 
 ### 6.6背景简写
 
@@ -1411,6 +1408,20 @@ body {
 
 链接导航综合案例：
 
+html结构：
+
+```html
+<div class="nav">
+  <a href="#">首页</a>
+  <a href="#">首页</a>
+  <a href="#">首页</a>
+  <a href="#">首页</a>
+  <a href="#">首页</a>
+</div>
+```
+
+css样式：
+
 ```css
 .nav {
 			/*让里面的6个链接 居中对齐水平  这句话对 行内元素 行内块元素都有效果的*/
@@ -1425,6 +1436,7 @@ body {
 			line-height: 50px;
 			color: #fff;
 			/*background-color: pink;*/
+      /*去掉下划线*/
 			text-decoration: none;
 			/*背景简写*/
 			background: url(images/bg.png) no-repeat;
@@ -1896,6 +1908,19 @@ width默认值为auto。
 - 样式冲突，遵循的原则是**就近原则。** 那个样式离着结构近，就执行那个样式。
 - 样式不冲突，不会层叠
 
+示例：
+
+```css
+div{
+  color:red;
+  font-size:18px;
+}
+div{
+  color:pink;
+}
+/*此时div里面文字颜色为pink。即声明相同样式时，后面样式覆盖前面样式*/
+```
+
 ### 9.2 CSS继承性
 
 概念：
@@ -1908,6 +1933,26 @@ width默认值为auto。
 
 - 恰当地使用继承可以简化代码，降低CSS样式的复杂性。比如有很多子级孩子都需要某个样式，可以给父级指定一个，这些孩子继承过来就好了。
 - 子元素可以继承父元素的样式（**text-，font-，line-这些元素开头的可以继承，以及color属性**）
+
+示例：
+
+```html
+<div>
+  <p>
+    我是p里面的
+  </p>
+</div>
+```
+
+css样式：
+
+```css
+div{
+  color:red;
+  font-size:18px;
+}
+/*此时p元素里面文字颜色为red，大小为18px*/
+```
 
 ### 9.3CSS优先级
 
@@ -1950,18 +1995,104 @@ div {
 - a:hover      -----—>   0,0,1,1
 - .nav a       ------>      0,0,1,1
 
+示例：
+
+```css
+/*权重为：1+1+1=3 */
+div ul  li{  }
+/*权重为：10+1+1=12 */
+.nav ul li{}
+/*权重为：1+10=11 */
+a:hover {}
+/*权重为：10+1=11 */
+.nav a {}
+```
+
 注意： 
 
 1. 数位之间没有进制 比如说： 0,0,0,5 + 0,0,0,5 =0,0,0,10 而不是 0,0, 1, 0， 所以不会存在10个div能赶上一个类选择器的情况。
 
+示例：
+
+```css
+div div div div div div div div div div div div {/*权重为：0,0,0,12*/
+  color:red
+}
+
+.me{/*权重为：0,0,1,0*/
+  color:blue
+}
+/*颜色为blue。因为权重计算不存在进位*/
+```
+
 #### 9.3.3继承的权重是0:
 
-这个不难，但是忽略很容易绕晕。其实，我们修改样式，一定要看该标签有没有被选中。
+其实，我们修改样式，一定要看该标签有没有被选中。
 
 1） 如果选中了，那么以上面的公式来计权重。谁大听谁的。 
-2） 如果没有选中，那么权重是0，因为继承的权重为0.
+2） 如果没有选中，那么权重是0，因为继承的权重为0。
 
-## 10.盒模型样式
+示例：
+
+html结构：
+
+```html
+<div class="demo">
+	<p>继承的权重是0</p>
+</div>
+```
+
+css：
+
+```css
+div{
+  color:red;
+}
+p{
+  color:green;
+}
+.demo{/*因为demo没有选p标签，所以继承的权重为0*/
+  color:blue
+}
+/*此时p元素里面文字颜色为green*/
+```
+
+就近原则：
+
+html结构：
+
+```html
+<div id="box1" class="c1">
+		<div id="box2" class="c2">
+			<div id="box3" class="c3">
+				文字
+			</div>
+		</div>
+	</div>
+```
+
+css:
+
+```css
+.c1 .c2 div{  
+			color: blue;
+		}
+		div #box3 {/*权重为101*/
+			color:green;
+		}
+		#box1 div { /*权重为101*/
+			color:yellow;
+		}
+/*权重相同，就采用就近原则（后写的样式近）。因此文字颜色为yellow*/
+```
+
+## 10.盒模型
+
+* 盒子模型有元素的内容、边框（border）、内边距（padding）、和外边距（margin）组成。
+* 盒子里面的文字和图片等元素是 内容区域
+* 盒子的厚度 我们成为 盒子的边框 
+* 盒子内容与边框的距离是内边距（类似单元格的 cellpadding)
+* 盒子与盒子之间的距离是外边距（类似单元格的 cellspacing）
 
 ### 10.1盒子边框
 
@@ -1984,29 +2115,90 @@ border : border-width || border-style || border-color
 - dashed：边框为虚线  
 - dotted：边框为点线
 
+示例：
+
+```css
+div{
+  border-width:1px;
+  border-style:solid;
+  border-color:red;
+}
+/*简写形式：*/
+div{
+  border:1px solid red;
+}
+```
+
+分别指定四个边框样式：
+
 ```css
 div {
 			width: 200px;
 			height: 400px;
 			/*上边框写法*/
 			border-top: 2px solid red;
-			border-left: 1px solid green;
+  		/*右边框写法*/
 			border-right: 1px solid blue;
+  		/*下边框写法*/
 			border-bottom: 1px solid pink;
-		}
-		input {
-			/*border-top: none;
-			border-left: none;
-			border-right: none;
-			border-bottom: 1px dashed red;*/
-			/*四个边框都去掉 先写大的，后写小的*/
-			border: none;
-			border-bottom: 1px dashed red;
-
-		}
+  		/*左边框写法*/
+			border-left: 1px solid green;
+}	
 ```
 
+只保留输入框的下边框写法：
 
+```css
+	input {
+    	/*去掉上左右边框*/
+			border-top: none;
+			border-left: none;
+			border-right: none;
+    	/*下边框样式*/
+			border-bottom: 1px dashed red;
+		}
+/*简写*/
+input{
+  /*去掉四个边框*/
+  border: none;
+  /*指定下边框*/
+	border-bottom: 1px dashed red;
+}
+```
+
+效果：
+
+![image-20200902191950630](https://gitee.com/xuxujian/webNoteImg/raw/master/allimg/image-20200902191950630.png)
+
+> 表格的细线边框
+
+- 通过表格的`cellspacing="0"`,将单元格与单元格之间的距离设置为0，
+
+- 但是两个单元格之间的边框会出现重叠，从而使边框变粗
+
+- 通过css属性：
+
+  ~~~
+  table{ border-collapse:collapse; }  
+  ~~~
+
+  - collapse 单词是合并的意思
+  - border-collapse:collapse; 表示相邻边框合并在一起。
+
+```css
+table {
+		width: 500px;
+		height: 300px;
+		border: 1px solid red;
+	}
+	td {
+		border: 1px solid red;
+		text-align: center;
+	}
+	table, td {
+		border-collapse: collapse;  /*合并相邻边框*/
+	}
+```
 
 
 
@@ -2036,22 +2228,7 @@ div{
 	将所有边框颜色设置为透明或者白色，然后单独设置需要显示上边框的颜色
 ```
 
-```css
-<style>
-	table {
-		width: 500px;
-		height: 300px;
-		border: 1px solid red;
-	}
-	td {
-		border: 1px solid red;
-		text-align: center;
-	}
-	table, td {
-		border-collapse: collapse;  /*合并相邻边框*/
-	}
-</style>
-```
+
 
 #### 10.1.2圆角边框
 
@@ -2066,7 +2243,7 @@ border-radius:length;
 - 其中每一个值可以为 数值或百分比的形式。 
 - 技巧： 让一个正方形  变成圆圈 `border-radius: 50%;`
 
-![image-20200326223203576](E:%5CwebNote%5CCSS%5CCSS%E6%95%99%E7%A8%8B.assets%5Cimage-20200326223203576.png)
+
 
 * 以上效果图矩形的圆角， 就不要用 百分比了，因为百分比会是表示高度和宽度的一半。
 * 而我们这里矩形就只用 用 高度的一半就好了。精确单位。
@@ -2245,7 +2422,7 @@ border-image-outset属性定义边框图像可超出边框盒的大小
 
 ### 10.2盒子内边距
 
-指边框与内容之间的距离
+padding属性用于设置内边距。 **是指 边框与内容之间的距离。**
 
 | 属性           | 作用     |
 | -------------- | :------- |
@@ -2264,12 +2441,33 @@ border-image-outset属性定义边框图像可超出边框盒的大小
 - 可以撑大元素的尺寸
 - 背景可以延伸到padding区域
 
+简写：
+
 | 值的个数 | 表达意思                                        |
 | -------- | ----------------------------------------------- |
 | 1个值    | padding：上下左右内边距;                        |
 | 2个值    | padding: 上下内边距    左右内边距 ；            |
 | 3个值    | padding：上内边距   左右内边距   下内边距；     |
 | 4个值    | padding: 上内边距 右内边距 下内边距 左内边距 ； |
+
+```css
+div {
+			/*左内边距*/
+			/*padding-left: 10px;
+			padding-top: 30px;*/
+			/*padding 简写 复合写法*/
+			/*padding: 20px; 上下左右 都是 20 内边距*/
+			/*padding: 10px 20px; 上下10  左右 20 内边距*/
+			/*padding: 10px 20px 30px; 上 10  左右 20  下 30 内边距*/
+			/*padding: 10px 20px 30px 40px;  上10 右 20  下 30 左 40 顺时针*/
+		}
+```
+
+> 元素实际大小:
+
+
+
+![盒模型大小](https://gitee.com/xuxujian/webNoteImg/raw/master/allimg/盒模型大小.png)
 
 - 宽度
 
@@ -2281,7 +2479,7 @@ border-image-outset属性定义边框图像可超出边框盒的大小
 
 -  盒子的实际的大小 =   内容的宽度和高度 +  内边距   +  边框   
 
-解决：
+解决方法：
 
 通过给设置了宽高的盒子，减去相应的内边距的值，维持盒子原有的大小
 
@@ -2295,8 +2493,7 @@ div {
 			/*盒子的实际大小 =  内容宽度 高度 +  内边距 +  边框*/
 			      /*           =   200  +  20  +  0
 			                 =   220  */
-             /*解决的方法：
-                内边距一定要给的， 我们只能改变 内容宽度 width 让他减去 多出来的内边距就可以了*/
+      /*解决的方法：内边距一定要给的， 我们只能改变 内容宽度 width 让他减去 多出来的内边距就可以了*/
                 /*200 - 20  =  180 */
 		}
 ```
@@ -2313,11 +2510,64 @@ div {
 			height: 30px;
 			background-color: purple;
 			padding-left: 30px;
-			/*特殊情况， 如果这个盒子啊，没有宽度 则padding 不会撑开盒子*/
+			/*特殊情况： 如果这个盒子没有宽度， 则padding 不会撑开盒子*/
 		}
 ```
 
+> 案例：
 
+新浪导航：
+
+新浪导航栏的核心就是因为里面的字数不一样多，所以我们不方便给宽度，还是给padding ，撑开盒子的。
+
+html结构：
+
+```html
+<div class="nav">
+		<a href="#">设为首页</a>
+		<a href="#">手机新浪网</a>
+		<a href="#">移动客户端</a>
+		<a href="#">博客</a>
+		<a href="#">微博</a>
+		<a href="#">关注我</a>
+	</div>
+```
+
+css
+
+```css
+/*清除元素默认的内外边距*/
+		* {
+			margin: 0;
+			padding: 0;
+		}
+		.nav {
+			height: 41px;
+			background-color: #FCFCFC;
+			/*上边框*/
+			border-top: 3px solid #FF8500;
+			/*下边框*/
+			border-bottom: 1px solid #EDEEF0;
+		}
+		.nav a {
+			/*转换为行内块*/
+			display: inline-block;
+			height: 41px;
+			line-height: 41px;
+			color: #4C4C4C;
+			/*代表 上下是 0  左右是 20 内边距*/
+			padding: 0 20px;
+			text-decoration: none;
+			font-size: 12px;
+		}
+		.nav a:hover {
+			background-color: #eee;
+		}
+```
+
+效果：
+
+![image-20200902233845275](https://gitee.com/xuxujian/webNoteImg/raw/master/allimg/image-20200902233845275.png)
 
 ### 10.3外边距
 
@@ -2342,17 +2592,31 @@ margin值的简写 （复合写法）代表意思  跟 padding 完全相同。
 实际工作中常用这种方式进行网页布局，示例代码如下：
 
 ```css
-.header{ width:960px; margin:0 auto;}
+.header{ 
+  width:960px; 
+  margin:0 auto;
+}
 ```
 
 常见的写法，以下下三种都可以。
 
 ```css
-- margin-left: auto;   margin-right: auto;
-- margin: auto;
-- margin: 0 auto;
-
+div{margin-left: auto;   margin-right: auto;}
+div{margin: auto;}
+div{margin: 0 auto;}
 ```
+
+#### 文字居中和盒子居中区别
+
+1.  盒子内的文字水平居中是  text-align: center,  而且还可以让 行内元素和行内块居中对齐
+2.  块级盒子水平居中  左右margin 改为 auto 
+
+~~~css
+text-align: center; /*  文字 行内元素 行内块元素水平居中 */
+margin: 10px auto;  /* 块级盒子水平居中  左右margin 改为 auto 就阔以了 上下margin都可以 */
+~~~
+
+
 
 #### 10.3.2插入图片和背景图片区别
 
@@ -2402,7 +2666,7 @@ margin值的简写 （复合写法）代表意思  跟 padding 完全相同。
 - 下面的元素有上外边距margin-top，则他们之间的垂直间距不是margin-bottom与margin-top之和
 - **取两个值中的较大者**这种现象被称为相邻块元素垂直外边距的合并（也称外边距塌陷）。
 
-![image-20200326222847477](E:%5CwebNote%5CCSS%5CCSS%E6%95%99%E7%A8%8B.assets%5Cimage-20200326222847477.png)
+![image-20200326222847477](https://gitee.com/xuxujian/webNoteImg/raw/master/allimg/image-20200326222847477.png)
 
 **解决方案：尽量给只给一个盒子添加margin值**。
 
@@ -2412,7 +2676,7 @@ margin值的简写 （复合写法）代表意思  跟 padding 完全相同。
 - 父元素的上外边距会与子元素的上外边距发生合并
 - 合并后的外边距为两者中的较大者
 
-![image-20200326222941394](E:%5CwebNote%5CCSS%5CCSS%E6%95%99%E7%A8%8B.assets%5Cimage-20200326222941394.png)
+![image-20200326222941394](https://gitee.com/xuxujian/webNoteImg/raw/master/allimg/image-20200326222941394.png)
 
 **解决方案：**
 
@@ -2432,7 +2696,7 @@ margin值的简写 （复合写法）代表意思  跟 padding 完全相同。
 box-shadow:水平阴影 垂直阴影 模糊距离（虚实）  阴影尺寸（影子大小）  阴影颜色  内/外阴影；
 ```
 
-![image-20200326225734147](E:%5CwebNote%5CCSS%5CCSS%E6%95%99%E7%A8%8B.assets%5Cimage-20200326225734147.png)
+![image-20200326225734147](https://gitee.com/xuxujian/webNoteImg/raw/master/allimg/image-20200326225734147.png)
 
 前两个属性是必须写的。其余的可以省略。
 
