--- a/javascript/基础/05.标准库.md
+++ b/javascript/基础/05.标准库.md
@@ -451,13 +451,14 @@ JavaScript 提供了一个内部数据结构，用来描述对象的属性，控
 下面是属性描述对象的一个例子。
 
 ```js
+//默认值
 {
-  value: 123,
-  writable: false,
-  enumerable: true,
-  configurable: false,
+  value: undefined,
   get: undefined,
   set: undefined
+  writable: true,
+  enumerable: true,
+  configurable: true,
 }
 ```
 
@@ -583,7 +584,7 @@ obj.p // 123
 
 上面代码中，`Object.defineProperty()`方法定义了`obj.p`属性。由于属性描述对象的`writable`属性为`false`，所以`obj.p`属性不可写。注意，这里的`Object.defineProperty`方法的第一个参数是`{}`（一个新建的空对象），`p`属性直接定义在这个空对象上面，然后返回这个对象，这是`Object.defineProperty()`的常见用法。
 
-如果属性已经存在，`Object.defineProperty()`方法相当于更新该属性的属性描述对象。
+> 如果属性已经存在，`Object.defineProperty()`方法相当于更新该属性的属性描述对象。
 
 如果一次性定义或修改多个属性，可以使用`Object.defineProperties()`方法。
 
@@ -2723,7 +2724,7 @@ one + two + three // "33"
 
 上面代码中，第二个例子的参数`-3`会自动变成`0`，等同于`'JavaScript'.substring(4, 0)`。由于第二个参数小于第一个参数，会自动互换位置，所以返回`Java`。
 
-由于这些规则违反直觉，因此不建议使用`substring`方法，应该优先使用`slice`。
+> 由于这些规则违反直觉，因此不建议使用`substring`方法，应该优先使用`slice`。
 
 #### 7.4.6.`String.prototype.substr()`
 
@@ -2794,7 +2795,7 @@ one + two + three // "33"
 
 #### 7.4.9.`String.prototype.toLowerCase()`，`String.prototype.toUpperCase()`
 
-`toLowerCase`方法用于将一个字符串全部转为小写，`toUpperCase`则是全部转为大写。它们都返回一个新字符串，不改变原字符串。
+`toLowerCase`方法用于将一个字符串全部转为小写，`toUpperCase`则是全部转为大写。**它们都返回一个新字符串，不改变原字符串**。
 
 ```js
 'Hello World'.toLowerCase()
@@ -2924,7 +2925,7 @@ matches.input // "cat, bat, sat, fat"
 
 ## 8.Math()对象
 
-`Math`是 JavaScript 的原生对象，提供各种数学功能。==该对象不是构造函数，不能生成实例，所有的属性和方法都必须在`Math`对象上调用==。
+**`Math`是 JavaScript 的原生对象**，提供各种数学功能。**该对象不是构造函数，不能生成实例，所有的属性和方法都必须在`Math`对象上调用**。
 
 ### 8.1静态属性
 
@@ -3180,20 +3181,21 @@ Date()
 // "Tue Dec 01 2015 09:34:43 GMT+0800 (CST)"
 ```
 
-==注意==:即使带有参数，`Date`作为普通函数使用时，返回的还是当前时间。
+> **注意:即使带有参数，`Date`作为普通函数使用时，返回的还是当前时间。**
 
 ```js
 Date(2000, 1, 1)
 // "Tue Dec 01 2015 09:34:43 GMT+0800 (CST)"
 ```
 
-上面代码说明，==无论有没有参数，直接调用`Date`总是返回当前时间==。
+上面代码说明，无论有没有参数，直接调用`Date`总是返回当前时间。
 
 ### 9.2构造函数的用法
 
-`Date`还可以当作构造函数使用。对它使用`new`命令，会返回一个`Date`对象的实例。==如果不加参数，实例代表的就是当前时间==。
+`Date`还可以当作构造函数使用。对它使用`new`命令，会返回一个`Date`对象的实例。如果不加参数，实例代表的就是当前时间。
 
 ```js
+//如果不加参数，实例代表的就是当前时间
 var today = new Date();
 ```
 
@@ -3212,7 +3214,7 @@ today.toString()
 
 上面代码中，`today`是`Date`的实例，直接求值等同于调用`toString`方法。
 
-作为构造函数时，`Date`对象可以接受多种格式的参数，==返回一个该参数对应的时间实例==。
+作为构造函数时，`Date`对象可以接受多种格式的参数，返回一个该参数对应的时间实例。
 
 ```js
 // 参数为时间零点开始计算的毫秒数
@@ -3285,7 +3287,7 @@ new Date(2013, 0, 1, 0, 0, 0, 0)
 - 日：`1`到`31`。
 - 小时：`0`到`23`。
 - 分钟：`0`到`59`。
-- 秒：`0`到`59`
+- 秒：`0`到`59`。
 - 毫秒：`0`到`999`。
 
 注意，月份从`0`开始计算，但是，天数从`1`开始计算。另外，除了日期的默认值为`1`，小时、分钟、秒钟和毫秒的默认值都是`0`。
