--- a/CSS/01.CSS教程.md
+++ b/CSS/01.CSS教程.md
@@ -1,4 +1,4 @@
-1.css基本使用
+## 1.css基本使用
 
 **样式表**由**规则**组成，**规则**由**选择器**和**声明块**组成，声明块由一条一条声明组成，声明由合法的属性名和属性值组成。
 
@@ -1897,11 +1897,11 @@ width默认值为auto。
 
 ## 9.css三大特性
 
-### 9.1CSS层叠性
+### 9.1层叠性
 
 所谓层叠性是指多种CSS样式的叠加。
 
-是浏览器处理冲突的一个能力,如果一个属性通过两个相同选择器设置到同一个元素上，那么这个时候一个属性就会将另一个属性层叠掉
+是浏览器处理冲突的一个能力，如果一个属性通过两个相同选择器设置到同一个元素上，那么这个时候一个属性就会将另一个属性层叠掉。
 
 原则：
 
@@ -1918,10 +1918,12 @@ div{
 div{
   color:pink;
 }
-/*此时div里面文字颜色为pink。即声明相同样式时，后面样式覆盖前面样式*/
+/*
+	此时div里面文字颜色为pink，字体大小为18px。即声明相同样式时，后面样式覆盖前面样式。font-size样式不冲突，则不会覆盖。
+*/
 ```
 
-### 9.2 CSS继承性
+### 9.2继承性
 
 概念：
 
@@ -1951,12 +1953,10 @@ div{
   color:red;
   font-size:18px;
 }
-/*此时p元素里面文字颜色为red，大小为18px*/
+/*此时p元素里面文字继承父亲div的样式。颜色为red，大小为18px*/
 ```
 
-### 9.3CSS优先级
-
-概念：
+### 9.3优先级
 
 定义CSS样式时，经常出现两个或更多规则应用在同一元素上，此时，
 
@@ -1965,16 +1965,16 @@ div{
 
 #### 9.3.1权重计算公式：
 
-| 标签选择器             | 计算权重公式 |
-| ---------------------- | ------------ |
-| 继承或者 *             | 0,0,0,0      |
-| 每个元素（标签选择器） | 0,0,0,1      |
-| 每个类，伪类           | 0,0,1,0      |
-| 每个ID                 | 0,1,0,0      |
-| 每个行内样式 style=""  | 1,0,0,0      |
-| 每个!important  重要的 | ∞ 无穷大     |
+| 标签选择器               | 计算权重公式 |
+| ------------------------ | ------------ |
+| 继承或者 `*`             | 0,0,0,0      |
+| 元素（元素选择器）       | 0,0,0,1      |
+| 类，伪类                 | 0,0,1,0      |
+| ID选择器                 | 0,1,0,0      |
+| 行内样式 `style=""`      | 1,0,0,0      |
+| 每个`!important`  重要的 | ∞ 无穷大     |
 
-- 值从左到右，左面的最大，一级大于一级，数位之间没有进制，级别之间不可超越。 
+- 值从左到右，左面的最大，一级大于一级，**数位之间没有进制，级别之间不可超越**。 
 
 - 关于CSS权重，我们需要一套计算公式来去计算，这个就是 CSS Specificity（特殊性）
 
@@ -1988,14 +1988,7 @@ div {
 
 我们经常用交集选择器，后代选择器等，是有多个基础选择器组合而成，那么此时，就会出现权重叠加。
 
-就是一个简单的加法计算
-
-- div ul  li   ------>      0,0,0,3
-- .nav ul li   ------>      0,0,1,2
-- a:hover      -----—>   0,0,1,1
-- .nav a       ------>      0,0,1,1
-
-示例：
+就是一个简单的加法计算:
 
 ```css
 /*权重为：1+1+1=3 */
@@ -2008,9 +2001,7 @@ a:hover {}
 .nav a {}
 ```
 
-注意： 
-
-1. 数位之间没有进制 比如说： 0,0,0,5 + 0,0,0,5 =0,0,0,10 而不是 0,0, 1, 0， 所以不会存在10个div能赶上一个类选择器的情况。
+>注意： 数位之间没有进制 比如说： 0,0,0,5 + 0,0,0,5 =0,0,0,10 而不是 0,0, 1, 0，**所以不会存在10个div能赶上一个类选择器的情况**。
 
 示例：
 
@@ -2025,9 +2016,9 @@ div div div div div div div div div div div div {/*权重为：0,0,0,12*/
 /*颜色为blue。因为权重计算不存在进位*/
 ```
 
-#### 9.3.3继承的权重是0:
+#### 9.3.3继承的权重是0
 
-其实，我们修改样式，一定要看该标签有没有被选中。
+其实，我们修改样式，**一定要看该标签有没有被选中**。
 
 1） 如果选中了，那么以上面的公式来计权重。谁大听谁的。 
 2） 如果没有选中，那么权重是0，因为继承的权重为0。
@@ -2057,7 +2048,9 @@ p{
 /*此时p元素里面文字颜色为green*/
 ```
 
-就近原则：
+#### 9.3.4就近原则
+
+权重相同，就采用就近原则（后写的样式离结构近）
 
 html结构：
 
@@ -2088,11 +2081,13 @@ css:
 
 ## 10.盒模型
 
-* 盒子模型有元素的内容、边框（border）、内边距（padding）、和外边距（margin）组成。
-* 盒子里面的文字和图片等元素是 内容区域
+* 盒子模型有元素的内容（content）、边框（border）、内边距（padding）、和外边距（margin）组成。
+* 盒子里面的文字和图片等元素是内容区域
 * 盒子的厚度 我们成为 盒子的边框 
 * 盒子内容与边框的距离是内边距（类似单元格的 cellpadding)
 * 盒子与盒子之间的距离是外边距（类似单元格的 cellspacing）
+
+![标准盒子模型](https://gitee.com/xuxujian/webNoteImg/raw/master/allimg/标准盒子模型.png)
 
 ### 10.1盒子边框
 
@@ -2129,7 +2124,22 @@ div{
 }
 ```
 
-分别指定四个边框样式：
+简写：
+
+```css
+1.border-width	简写属性
+		border-top-width	上边框宽度
+		border-right-width	右边框宽度
+		border-bottom-width	下边框宽度
+		border-left-width	左边框宽度
+2.简写属性取值个数说明：
+		border-width：1px；同时设置四个边框的大小
+		border-width：1px 2px；上下为1px，左右为2px；
+		border-width: 1px 2px 3px; 上为1px，左右为2px，下为3px；
+		border-width：1px 2px 3px 4px;设置顺序为上右下左
+```
+
+#### 10.1.1分别指定四个边框样式
 
 ```css
 div {
@@ -2146,10 +2156,10 @@ div {
 }	
 ```
 
-只保留输入框的下边框写法：
+#### 10.1.2只保留输入框的下边框写法
 
 ```css
-	input {
+input {
     	/*去掉上左右边框*/
 			border-top: none;
 			border-left: none;
@@ -2170,20 +2180,25 @@ input{
 
 ![image-20200902191950630](https://gitee.com/xuxujian/webNoteImg/raw/master/allimg/image-20200902191950630.png)
 
-> 表格的细线边框
+#### 10.1.3表格的细线边框
 
 - 通过表格的`cellspacing="0"`,将单元格与单元格之间的距离设置为0，
 
 - 但是两个单元格之间的边框会出现重叠，从而使边框变粗
 
-- 通过css属性：
+- 通过css属性设置边框：
 
-  ~~~
-  table{ border-collapse:collapse; }  
-  ~~~
+```css
+table{ 
+  border-collapse:collapse;
+} 
+/*
+	collapse 单词是合并的意思。
+	border-collapse:collapse; 表示相邻边框合并在一起。
+*/
+```
 
-  - collapse 单词是合并的意思
-  - border-collapse:collapse; 表示相邻边框合并在一起。
+设置表格的完整样式：
 
 ```css
 table {
@@ -2200,85 +2215,90 @@ table {
 	}
 ```
 
+#### 10.1.4圆角边框
 
+ 用来设置边框圆角。
 
-```css
-1.border-width	简写属性
-		border-top-width	上边框宽度
-		border-right-width	右边框宽度
-		border-bottom-width	下边框宽度
-		border-left-width	左边框宽度
-2.简写属性取值个数说明：
-		border-width：1px；同时设置四个边框的大小
-		border-width：1px 2px；上下为1px，左右为2px；
-		border-width: 1px 2px 3px; 上为1px，左右为2px，下为3px；
-		border-width：1px 2px 3px 4px;设置顺序为上右下左
+- 当使用一个半径时确定一个圆形；
 
-边框特点：
-	1.当盒子宽高为0时，边框宽度大于1px时，边框形状为三角形
-	2.当盒子宽高不为0时，边框宽度为1px时，边框形状是一条直线，当边框宽度大于1px时，边框形状为梯形
-应用：倒三角形
-div{
-    width:0;
-    height:0;
-    border:10px solid #fff;
-    border-top-color:red;
-}
-原理：
-	将所有边框颜色设置为透明或者白色，然后单独设置需要显示上边框的颜色
-```
-
-
-
-#### 10.1.2圆角边框
-
- 用来设置边框圆角。当使用一个半径时确定一个圆形；当使用两个半径时确定一个椭圆，这个(椭)圆与边框的交集形成圆角效果。
+- 当使用两个半径时确定一个椭圆，这个(椭)圆与边框的交集形成圆角效果。
 
 语法：
 
 ```css
-border-radius:length;  
+border-radius:length;  /*其中每一个值可以为 数值或百分比的形式。*/
 ```
 
-- 其中每一个值可以为 数值或百分比的形式。 
-- 技巧： 让一个正方形  变成圆圈 `border-radius: 50%;`
+**取值类型：**
 
+- 固定的px值定义圆形半径或椭圆的半长轴，半短轴。**不能用负值**
+- 使用百分数定义圆形半径或椭圆的半长轴，半短轴。水平半轴相对于盒模型的宽度；垂直半轴相对于盒模型的高度。**不能用负值**
 
+**简写属性：**
 
-* 以上效果图矩形的圆角， 就不要用 百分比了，因为百分比会是表示高度和宽度的一半。
-* 而我们这里矩形就只用 用 高度的一半就好了。精确单位。
+```css
+div{
+  /*左上圆角*/
+	border-top-left-radius:30px;
+  /*右上圆角*/
+	border-top-right-radius:30px;
+  /*右下圆角*/
+	border-bottom-right-radius:30px;
+  /*左下圆角*/
+	border-bottom-left-radius:30px;
+}
+/*半径的第一个语法取值个数可取1~4个值:*/
+div{
+  /*1个值:作用于四个角*/
+   border-radius: 10px;
+  /*2个值:第一个值为左上和右下对角，第二个值为右上和左下对角*/
+   border-radius: 10px 30px;
+  /*3个值:第一个值为左上角，第二个值为右上和左下对角，第三个值为右下角*/
+   border-radius: 10px 20px 30px;
+   /*4个值:依次为：左上，右上，右下，坐下顺时针*/
+   border-radius: 10px 20px 30px 40px;
+}
+```
 
-值：
-    固定的px值定义圆形半径或椭圆的半长轴，半短轴。==不能用负值==
-    使用百分数定义圆形半径或椭圆的半长轴，半短轴。水平半轴相对于盒模型的宽度；垂直半轴相对于盒模型的高度。==不能用负值==
-    这是一个简写属性，用来设置 
-                      border-top-left-radius,
-                      border-top-right-radius,
-                      border-bottom-right-radius ，
-                      border-bottom-left-radius
-    半径的第一个语法取值可取1~4个值:
-        border-radius: radius             
-        border-radius: top-left  and  bottom-right      top-right and bottom-left 
-        border-radius: top-left     top-right-and-bottom-left     bottom-right 
-        border-radius: top-left     top-right     bottom-right      bottom-left 
-
-​	  半径的第二个语法取值也可取1~4个值
-​         border-radius: (first radius values) / radius             
-​         border-radius: (first radius values) / top-left-and-bottom-right      top-right-and-bottom-left 
-​         border-radius: (first radius values) / top-left     top-right-and-bottom-left     bottom-right 
-​         border-radius: (first radius values) / top-left     top-right     bottom-right       bottom-left 
-
-注意
+注意:
     百分比值
        在旧版本的 Chrome 和 Safari 中不支持。(fixed in Sepember 2010)
        在 11.50 版本以前的 Opera 中实现有问题。
        Gecko 2.0 (Firefox 4) 版本前实现不标准：水平半轴和垂直半轴都相对于盒子模型的宽度。
        在旧版本的 iOS (iOS 5 之前) 和 Android 中 (WebKit 532 之前) 不支持。
 
-==案例：风车==
+> 圆点
 
 ```css
-<style>
+div {
+        width: 10px;
+        height: 10px;
+        background: tomato;
+  			/*为正方形宽度的一半就是圆*/
+  			border-radius:5px;
+  			/*与下面样式等价*/
+        border-radius: 50%;/*百分比值表示高度和宽度的一半。因此只适合正方形设置为圆*/
+}
+```
+
+![image-20200903155741335](https://gitee.com/xuxujian/webNoteImg/raw/master/allimg/image-20200903155741335.png)
+
+> 风车
+
+html结构
+
+```html
+<div class="box">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+</div>
+```
+
+css:
+
+```css
 .box{
 	width:400px;
 	height:400px;
@@ -2303,59 +2323,116 @@ border-radius:length;
 .box:hover{
 	transform:rotate(720deg);
 }
-</style>
-
-<body>
-<div class="box">
-	<div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-</div>
 ```
 
+<img src="https://gitee.com/xuxujian/webNoteImg/raw/master/allimg/image-20200903160353855.png" alt="image-20200903160353855" style="zoom:50%;" />
 
+总结：如果为矩形，则使用px值设置为圆角边框。如果为正方形，则用百分比设置为圆形。
 
-#### 10.1.3css三角
+#### 10.1.5 css三角
+
+边框特点：
+	1.当盒子宽高为0时，边框宽度大于1px时，边框形状为三角形
+	2.当盒子宽高不为0时，边框宽度为1px时，边框形状是一条直线，当边框宽度大于1px时，边框形状为梯形
+
+> 倒三角
 
 ```css
- div {
-
- 	width: 0; 
-    height: 0;
-    line-height:0；
-    font-size: 0;
-	border-top: 10px solid red;
-
-	border-right: 10px solid green;
-
-	border-bottom: 10px solid blue;
-
-	border-left: 10px solid #000; 
-
- }
-
+div{
+    width:0;
+    height:0;/*高度可以不为0*/
+    border:10px solid #fff;
+    border-top-color:red;
+}
+/*原理：将所有边框颜色设置为透明或者白色，然后单独设置需要显示上边框的颜色*/
 ```
 
-1. 我们用css 边框可以模拟三角效果
-2. 宽度高度为0
-3. 我们4个边框都要写， 只保留需要的边框颜色，其余的不能省略，都改为 transparent 透明就好了
-4. 为了照顾兼容性 低版本的浏览器，加上 font-size: 0;  line-height: 0;
+![image-20200903152504641](https://gitee.com/xuxujian/webNoteImg/raw/master/allimg/image-20200903152504641.png)
 
-#### 10.1.4边框图片
+> 直线
 
-border-image CSS属性允许在元素的边框上绘制图像。这使得绘制复杂的外观组件更加简单，使用 border-image 时，其将会替换掉 border-style 属性所设置的边框样式
+```css
+/********水平直线**************/
+div {
+        width: 100px;/*控制水平直线的长度*/
+        height: 0px;/*水平直线可以不添加高度，因为div为块级盒子，默认沾满一行。*/
+        border: 1px solid transparent;
+        border-top-color: red;
+}
 
-默认值：              不可继承
-border-image-source: none
-border-image-slice: 100%
-border-image-width: 1
-border-image-outset: none
-border-image-repeat: stretch
+/*
+	注意：
+			当设置垂直直线时，必须要加height，因为div盒子高度默认为内容高度。盒子多高，垂直直线就多高
+*/
+/********垂直直线**************/
+div {
+        width: 1px;
+        height: 150px;/*控制垂直直线的长度*/
+        border: 1px solid transparent;
+        border-left-color: red;
+}
+/*原理：当盒子宽高不为0时，边框宽度为1px时，边框形状是一条直线*/
+```
+
+![image-20200903153121633](https://gitee.com/xuxujian/webNoteImg/raw/master/allimg/image-20200903153121633.png)
+
+> 梯形
+
+```css
+div {
+        width: 100px;
+        height: 100px;
+        border: 10px solid transparent;
+        border-top-color: red;
+}
+/**原理：当盒子宽高不为0时，当边框宽度大于1px时，边框形状为梯形*/
+```
+
+![image-20200903153308471](https://gitee.com/xuxujian/webNoteImg/raw/master/allimg/image-20200903153308471.png)
+
+> 四面三角形
+
+```css
+div {
+        width: 0px;
+        height: 0px;
+  			font-size: 0; 
+  			line-height: 0;
+        border: 10px solid transparent;
+        border-right-color: tomato;
+        border-top-color: turquoise;
+        border-left-color: violet;
+        border-bottom-color: yellow;
+}
+/*原理：
+		将所有边框颜色设置为透明或者白色，然后单独设置需要显示上边框的颜色
+*/
+/*注意：
+		为了照顾兼容性 低版本的浏览器，加上 font-size: 0;  line-height: 0;
+*/
+```
+
+![image-20200903155439897](https://gitee.com/xuxujian/webNoteImg/raw/master/allimg/image-20200903155439897.png)
+
+#### 10.1.6边框图片
+
+`border-image` 属性允许在元素的边框上绘制图像。这使得绘制复杂的外观组件更加简单，使用 `border-image` 时，其将会替换掉 `border-style` 属性所设置的边框样式。
+
+默认值：不可继承
+
+```css
+div{
+  border-image-source: none;
+	border-image-slice: 100%;
+	border-image-width: 10px;
+	border-image-outset: none;
+	border-image-repeat: stretch;
+}
+```
 
 > border-image-source
 
-border-image-source 属性定义使用一张图片来代替边框样式；如果只为none，则仍然使用border-style 定义的样式。
+`border-image-source` 属性定义使用一张图片来代替边框样式；如果值为`none`，则仍然使用`border-style` 定义的样式。
 
 默认值：none   不可继承
 
@@ -2363,8 +2440,7 @@ border-image-source 属性定义使用一张图片来代替边框样式；如果
 
 > border-image-slice
 
-border-image-slice 属性会通过规范将 border-image-source  的图片明确的分割为9个区域：四个角，四边以及中心区域。
-并可指定偏移量
+`border-image-slice` 属性会通过规范将` border-image-source`  的图片明确的分割为9个区域：四个角，四边以及中心区域。并可指定偏移量
 
 语法：`border-image-slice:33.3333% ;`
 
@@ -2381,7 +2457,7 @@ border-image-slice 属性会通过规范将 border-image-source  的图片明确
 
 > border-image-repeat
 
-border-image-repeat 定义图片如何填充边框。
+`border-image-repeat` 定义图片如何填充边框。
 
 - 为单个值，设置所有的边框；
 - 为两个值，分别设置水平与垂直的边框。
@@ -2396,7 +2472,7 @@ repeat，round（平铺）
 
 > border-image-width
 
-border-image-width 定义图像边框宽度。 
+`border-image-width` 定义图像边框宽度。 
 
 默认值：1   不可继承
 
@@ -2406,23 +2482,19 @@ border-image-width 定义图像边框宽度。
 
 > border-image-outset
 
-border-image-outset属性定义边框图像可超出边框盒的大小
+`border-image-outset`属性定义边框图像可超出边框盒的大小
 
 默认值：0  不可继承
 
-正值： 可超出边框盒的大小
+正值： 可超出边框盒的大小。
 
 不可取负值
 
 示例：`border-image-outset:10px ;`
 
-
-
-
-
 ### 10.2盒子内边距
 
-padding属性用于设置内边距。 **是指 边框与内容之间的距离。**
+`padding`属性用于设置内边距。 **是指 边框与内容之间的距离。**
 
 | 属性           | 作用     |
 | -------------- | :------- |
@@ -2433,13 +2505,13 @@ padding属性用于设置内边距。 **是指 边框与内容之间的距离。
 
 当我们给盒子指定padding值之后， 发生了2件事情：
 
-1. 内容和边框 有了距离，添加了内边距。
-2. 盒子会变大了。
+1. 内容和边框有了距离，添加了内边距。
+2. 盒子会变大。
 
 特点：
 
 - 可以撑大元素的尺寸
-- 背景可以延伸到padding区域
+- 背景可以延伸到`padding`区域
 
 简写：
 
@@ -2498,8 +2570,6 @@ div {
 		}
 ```
 
-
-
 #### 10.2.1padding不影响盒子大小情况
 
 **如果没有给一个盒子指定宽度， 此时，如果给这个盒子指定padding， 则不会撑开盒子。**
@@ -2514,11 +2584,9 @@ div {
 		}
 ```
 
-> 案例：
+#### 10.2.2新浪导航
 
-新浪导航：
-
-新浪导航栏的核心就是因为里面的字数不一样多，所以我们不方便给宽度，还是给padding ，撑开盒子的。
+新浪导航栏的核心就是因为里面的字数不一样多，所以我们不方便给宽度，还是给`padding `，撑开盒子的。
 
 html结构：
 
@@ -2571,7 +2639,7 @@ css
 
 ### 10.3外边距
 
-​	margin属性用于设置外边距。  margin就是控制**盒子和盒子之间的距离**
+​	`margin`属性用于设置外边距。  `margin`就是控制**盒子和盒子之间的距离**
 
 | 属性          | 作用     |
 | ------------- | :------- |
@@ -2580,11 +2648,11 @@ css
 | margin-top    | 上外边距 |
 | margin-bottom | 下外边距 |
 
-margin值的简写 （复合写法）代表意思  跟 padding 完全相同。
+margin值的简写 （复合写法）代表意思 跟 padding 完全相同。
 
 #### 10.3.1块级盒子水平居中
 
-可以让一个块级盒子实现水平居中必须：
+可以让一个块级盒子实现水平居中：
 
 - 盒子必须指定了宽度（width）
 - 然后就给**左右的外边距都设置为auto**，
@@ -2598,17 +2666,20 @@ margin值的简写 （复合写法）代表意思  跟 padding 完全相同。
 }
 ```
 
-常见的写法，以下下三种都可以。
+常见的写法，以下三种都可以。
 
 ```css
-div{margin-left: auto;   margin-right: auto;}
+div{
+  margin-left: auto;
+  margin-right: auto;
+}
 div{margin: auto;}
 div{margin: 0 auto;}
 ```
 
-#### 文字居中和盒子居中区别
+#### 10.3.2文字居中和盒子居中区别
 
-1.  盒子内的文字水平居中是  text-align: center,  而且还可以让 行内元素和行内块居中对齐
+1.  盒子内的文字水平居中是  `text-align: center`,  而且还可以让行内元素和行内块居中对齐
 2.  块级盒子水平居中  左右margin 改为 auto 
 
 ~~~css
@@ -2616,20 +2687,18 @@ text-align: center; /*  文字 行内元素 行内块元素水平居中 */
 margin: 10px auto;  /* 块级盒子水平居中  左右margin 改为 auto 就阔以了 上下margin都可以 */
 ~~~
 
+#### 10.3.3插入图片和背景图片区别
 
+1. 插入图片 我们用的最多 比如产品展示类  移动位置只能靠盒模型` padding margin`
 
-#### 10.3.2插入图片和背景图片区别
-
-1. 插入图片 我们用的最多 比如产品展示类  移动位置只能靠盒模型 padding margin
-
-2. 背景图片我们一般用于小图标背景 或者 超大背景图片  背景图片 只能通过  background-position
+2. 背景图片我们一般用于小图标背景或者超大背景图片，背景图片只能通过`background-position`
 
 ~~~css
  img {  
 		width: 200px;/* 插入图片更改大小 width 和 height */
 		height: 210px;
 		margin-top: 30px;  /* 插入图片更改位置 可以用margin 或padding  盒模型 */
-		margin-left: 50px; /* 插入当图片也是一个盒子 */
+		margin-left: 50px; /* 插入图片也是一个盒子 */
 	}
 
  div {
@@ -2637,40 +2706,38 @@ margin: 10px auto;  /* 块级盒子水平居中  左右margin 改为 auto 就阔
 		height: 400px;
 		border: 1px solid purple;
 		background: #fff url(images/sun.jpg) no-repeat;
-		background-position: 30px 50px; /* 背景图片更改位置 我用 background-position */
+		background-position: 30px 50px; /* 背景图片更改位置 用 background-position */
 	}
 ~~~
 
-#### 10.3.3清除元素的默认内外边距(重要)
+#### 10.3.4清除元素的默认内外边距(重要)
 
-为了更灵活方便地控制网页中的元素，制作网页时，我们需要将元素的默认内外边距清除
+为了更灵活方便地控制网页中的元素，制作网页时，我们需要将元素的默认内外边距清除。
 
 ```css
 * {
-   padding:0;         /* 清除内边距 */
-   margin:0;          /* 清除外边距 */
+   padding:0;/* 清除内边距 */
+   margin:0;/* 清除外边距 */
 }
 ```
 
-注意：  
+> 注意：行内元素为了照顾兼容性， 尽量只设置左右内外边距， 不要设置上下内外边距。
 
-* 行内元素为了照顾兼容性， 尽量只设置左右内外边距， 不要设置上下内外边距。
-
-#### 10.3.4外边距合并
+#### 10.3.5外边距合并
 
 使用margin定义块元素的**垂直外边距**时，可能会出现外边距的合并。
 
-> 相邻块元素垂直外边距的合并
+> 1.相邻块元素垂直外边距的合并
 
-- 当上下相邻的两个块元素相遇时，如果上面的元素有下外边距margin-bottom
-- 下面的元素有上外边距margin-top，则他们之间的垂直间距不是margin-bottom与margin-top之和
+- 当上下相邻的两个块元素相遇时，如果上面的元素有下外边距`margin-bottom`
+- 下面的元素有上外边距`margin-top`，则他们之间的垂直间距不是`margin-bottom`与`margin-top`之和
 - **取两个值中的较大者**这种现象被称为相邻块元素垂直外边距的合并（也称外边距塌陷）。
 
 ![image-20200326222847477](https://gitee.com/xuxujian/webNoteImg/raw/master/allimg/image-20200326222847477.png)
 
-**解决方案：尽量给只给一个盒子添加margin值**。
+**解决方案：尽量只给一个盒子添加margin值**。
 
-> 嵌套块元素垂直外边距的合并（塌陷）
+> 2.嵌套块元素垂直外边距的合并（塌陷）
 
 - 对于两个嵌套关系的块元素，如果父元素没有上内边距及边框
 - 父元素的上外边距会与子元素的上外边距发生合并
@@ -2683,8 +2750,60 @@ margin: 10px auto;  /* 块级盒子水平居中  左右margin 改为 auto 就阔
 1. 可以为父元素定义上边框。
 2. 可以为父元素定义上内边距
 3. 可以为父元素添加overflow:hidden。
+4. 可以给父盒子中添加文字内容
 
 还有其他方法，比如浮动、固定、绝对定位的盒子不会有问题，后面咱们再总结。。。
+
+html结构：
+
+```html
+<div class="father">
+  <div class="son"></div>
+</div>
+```
+
+css
+
+```css
+.father{
+  width:500px;
+  height:500px;
+  background-color:pink;
+}
+.son{
+   width:500px;
+   height:500px;
+   background-color:deeppink;
+   margin-top:100px;/*此时相当于给父盒子设置外边距*/
+}
+```
+
+![image-20200903233655002](https://gitee.com/xuxujian/webNoteImg/raw/master/allimg/image-20200903233655002.png)
+
+解决办法：
+
+```css
+.father {
+			width: 500px;
+			height: 500px;
+			background-color: pink;
+			/*嵌套关系 垂直外边距合并  解决方案 */
+			/*1. 可以为父元素定义上边框  transparent 透明*/
+			/*border-top: 1px solid transparent;*/
+			/*2. 可以给父级指定一个 上 padding值*/
+			/*padding-top: 1px; */
+			/*3. 可以为父元素添加overflow:hidden。*/
+			overflow: hidden;
+		}
+		.son {
+			width: 200px;
+			height: 200px;
+			background-color: purple;
+			margin-top: 100px;
+		}
+```
+
+![image-20200903234103874](https://gitee.com/xuxujian/webNoteImg/raw/master/allimg/image-20200903234103874.png)
 
 
 
@@ -2693,14 +2812,16 @@ margin: 10px auto;  /* 块级盒子水平居中  左右margin 改为 auto 就阔
 语法：
 
 ```css
-box-shadow:水平阴影 垂直阴影 模糊距离（虚实）  阴影尺寸（影子大小）  阴影颜色  内/外阴影；
+box-shadow:水平阴影 垂直阴影 模糊距离（虚实）  阴影尺寸（影子大小，默认为盒子大小）  阴影颜色  内/外阴影；
 ```
 
 ![image-20200326225734147](https://gitee.com/xuxujian/webNoteImg/raw/master/allimg/image-20200326225734147.png)
 
+
+
 前两个属性是必须写的。其余的可以省略。
 
-外阴影 (outset) 是默认的 但是不能写           想要内阴影可以写  inset 
+外阴影 (outset) 是默认的，但是不能写 。 想要内阴影可以写 inset 
 
 ```css
 div {
@@ -2712,6 +2833,8 @@ div {
 			box-shadow: 0 15px 30px  rgba(0, 0, 0, .4);
 }
 ```
+
+![image-20200904001138658](https://gitee.com/xuxujian/webNoteImg/raw/master/allimg/image-20200904001138658.png)
 
 ### 10.5倒影
 
