--- a/javascript/ES6/01.let 和 const 命令.md
+++ b/javascript/ES6/01.let 和 const 命令.md
@@ -2,7 +2,7 @@
 
 ### 1.1基本用法
 
-ES6 新增了`let`命令，用来声明变量。它的用法类似于`var`，但是所声明的变量，只在`let`命令所在的代码块内有效。
+ES6 新增了`let`命令，用来声明变量。它的用法类似于`var`，但是所声明的变量，**只在`let`命令所在的代码块内有效**。
 
 ```js
 {
@@ -27,7 +27,7 @@ console.log(i);
 // ReferenceError: i is not defined
 ```
 
-上面代码中，计数器`i`只在`for`循环体内有效，在循环体外引用就会报错。
+上面代码中，**计数器`i`只在`for`循环体内有效，在循环体外引用就会报错**。
 
 下面的代码如果使用`var`，最后输出的是`10`。
 
@@ -73,7 +73,7 @@ for (let i = 0; i < 3; i++) {
 
 ### 1.2不存在变量提升
 
-`var`命令会发生“变量提升”现象，即变量可以在声明之前使用，值为`undefined`。这种现象多多少少是有些奇怪的，按照一般的逻辑，变量应该在声明语句之后才可以使用。
+`var`命令会发生**变量提升**现象，即变量可以在声明之前使用，值为`undefined`。这种现象多多少少是有些奇怪的，按照一般的逻辑，变量应该在声明语句之后才可以使用。
 
 为了纠正这种现象，`let`命令改变了语法行为，它所声明的变量一定要在声明后使用，否则报错。
 
@@ -104,7 +104,7 @@ if (true) {
 
 上面代码中，存在全局变量`tmp`，但是块级作用域内`let`又声明了一个局部变量`tmp`，导致后者绑定这个块级作用域，所以在`let`声明变量前，对`tmp`赋值会报错。
 
-ES6 明确规定，如果区块中存在`let`和`const`命令，这个区块对这些命令声明的变量，从一开始就形成了封闭作用域。凡是在声明之前就使用这些变量，就会报错。
+**ES6 明确规定，如果区块中存在`let`和`const`命令，这个区块对这些命令声明的变量，从一开始就形成了封闭作用域。凡是在声明之前就使用这些变量，就会报错**。
 
 总之，在代码块内，使用`let`命令声明变量之前，该变量都是不可用的。这在语法上，称为“暂时性死区”（temporal dead zone，简称 TDZ）。
 
@@ -341,8 +341,6 @@ function f() { console.log('I am outside!'); }
 
 上面代码在 ES5 中运行，会得到“I am inside!”，因为在`if`内声明的函数`f`会被提升到函数头部，实际运行的代码如下。
 
-
-
 ```js
 // ES5 环境
 function f() { console.log('I am outside!'); }
@@ -509,7 +507,7 @@ const age = 30;
 `const`实际上保证的，并不是变量的值不得改动，而是变量指向的那个内存地址所保存的数据不得改动。对于简单类型的数据（数值、字符串、布尔值），值就保存在变量指向的那个内存地址，因此等同于常量。但对于复合类型的数据（主要是对象和数组），变量指向的内存地址，保存的只是一个指向实际数据的指针，`const`只能保证这个指针是固定的（即总是指向另一个固定的地址），至于它指向的数据结构是不是可变的，就完全不能控制了。因此，将一个对象声明为常量必须非常小心。
 
 ```js
-onst foo = {};
+const foo = {};
 
 // 为 foo 添加一个属性，可以成功
 foo.prop = 123;
@@ -563,7 +561,7 @@ ES5 只有两种声明变量的方法：`var`命令和`function`命令。ES6 除
 
 ## 4.顶层对象的属性
 
-顶层对象，在浏览器环境指的是`window`对象，在 Node 指的是`global`对象。ES5 之中，顶层对象的属性与全局变量是等价的。
+顶层对象，在浏览器环境指的是`window`对象，在 Node 指的是`global`对象。**ES5 之中，顶层对象的属性与全局变量是等价的**。
 
 ```js
 window.a = 1;
