--- a/javascript/ES6/22.Module 的语法.md
+++ b/javascript/ES6/22.Module 的语法.md
@@ -4,7 +4,7 @@
 
 在 ES6 之前，社区制定了一些模块加载方案，最主要的有 CommonJS 和 AMD 两种。前者用于服务器，后者用于浏览器。ES6 在语言标准的层面上，实现了模块功能，而且实现得相当简单，完全可以取代 CommonJS 和 AMD 规范，成为浏览器和服务器通用的模块解决方案。
 
-ES6 模块的设计思想是尽量的静态化，使得编译时就能确定模块的依赖关系，以及输入和输出的变量。CommonJS 和 AMD 模块，都只能在运行时确定这些东西。比如，CommonJS 模块就是对象，输入时必须查找对象属性。
+**ES6 模块的设计思想是尽量的静态化，使得编译时就能确定模块的依赖关系，以及输入和输出的变量。CommonJS 和 AMD 模块，都只能在运行时确定这些东西。比如，CommonJS 模块就是对象，输入时必须查找对象属性**。
 
 ```js
 // CommonJS模块
@@ -17,7 +17,7 @@ let exists = _fs.exists;
 let readfile = _fs.readfile;
 ```
 
-上面代码的实质是整体加载`fs`模块（即加载`fs`的所有方法），生成一个对象（`_fs`），然后再从这个对象上面读取 3 个方法。这种加载称为“运行时加载”，因为只有运行时才能得到这个对象，导致完全没办法在编译时做“静态优化”。
+上面代码的实质是整体加载`fs`模块（即加载`fs`的所有方法），生成一个对象（`_fs`），然后再从这个对象上面读取 3 个方法。**这种加载称为“运行时加载”，因为只有运行时才能得到这个对象，导致完全没办法在编译时做“静态优化”**。
 
 ES6 模块不是对象，而是通过`export`命令显式指定输出的代码，再通过`import`命令输入。
 
@@ -117,7 +117,7 @@ export {
 
 上面代码使用`as`关键字，重命名了函数`v1`和`v2`的对外接口。重命名后，`v2`可以用不同的名字输出两次。
 
-需要特别注意的是，`export`命令规定的是对外的接口，必须与模块内部的变量建立一一对应关系。
+> 需要特别注意的是，`export`命令规定的是对外的接口，必须与模块内部的变量建立一一对应关系。
 
 ```js
 // 报错
@@ -169,9 +169,9 @@ setTimeout(() => foo = 'baz', 500);
 
 上面代码输出变量`foo`，值为`bar`，500 毫秒之后变成`baz`。
 
-这一点与 CommonJS 规范完全不同。CommonJS 模块输出的是值的缓存，不存在动态更新，详见下文《Module 的加载实现》一节。
+**这一点与 CommonJS 规范完全不同。CommonJS 模块输出的是值的缓存，不存在动态更新**，详见下文《Module 的加载实现》一节。
 
-最后，`export`命令可以出现在模块的任何位置，只要处于模块顶层就可以。如果处于块级作用域内，就会报错，下一节的`import`命令也是如此。这是因为处于条件代码块之中，就没法做静态优化了，违背了 ES6 模块的设计初衷。
+**最后，`export`命令可以出现在模块的任何位置，只要处于模块顶层就可以。如果处于块级作用域内，就会报错**，下一节的`import`命令也是如此。这是因为处于条件代码块之中，就没法做静态优化了，违背了 ES6 模块的设计初衷。
 
 ```js
 function foo() {
@@ -195,7 +195,7 @@ function setName(element) {
 }
 ```
 
-上面代码的`import`命令，用于加载`profile.js`文件，并从中输入变量。`import`命令接受一对大括号，里面指定要从其他模块导入的变量名。大括号里面的变量名，必须与被导入模块（`profile.js`）对外接口的名称相同。
+上面代码的`import`命令，用于加载`profile.js`文件，并从中输入变量。`import`命令接受一对大括号，里面指定要从其他模块导入的变量名。**大括号里面的变量名，必须与被导入模块（`profile.js`）对外接口的名称相同**。
 
 如果想为输入的变量重新取一个名字，`import`命令要使用`as`关键字，将输入的变量重命名。
 
@@ -203,7 +203,7 @@ function setName(element) {
 import { lastName as surname } from './profile.js';
 ```
 
-`import`命令输入的变量都是只读的，因为它的本质是输入接口。也就是说，不允许在加载模块的脚本里面，改写接口。
+**`import`命令输入的变量都是只读的，因为它的本质是输入接口。也就是说，不允许在加载模块的脚本里面，改写接口。**
 
 ```js
 import {a} from './xxx.js'
@@ -229,17 +229,16 @@ import {myMethod} from 'util';
 
 上面代码中，`util`是模块文件名，由于不带有路径，必须通过配置，告诉引擎怎么取到这个模块。
 
-注意，`import`命令具有提升效果，会提升到整个模块的头部，首先执行。
+**注意，`import`命令具有提升效果，会提升到整个模块的头部，首先执行**。
 
 ```js
 foo();
-
 import { foo } from 'my_module';
 ```
 
-上面的代码不会报错，因为`import`的执行早于`foo`的调用。这种行为的本质是，`import`命令是编译阶段执行的，在代码运行之前。
+上面的代码不会报错，因为`import`的执行早于`foo`的调用。**这种行为的本质是，`import`命令是编译阶段执行的，在代码运行之前**。
 
-由于`import`是静态执行，所以不能使用表达式和变量，这些只有在运行时才能得到结果的语法结构。
+> **由于`import`是静态执行，所以不能使用表达式和变量，这些只有在运行时才能得到结果的语法结构。**
 
 ```js
 // 报错
@@ -286,7 +285,7 @@ import { foo, bar } from 'my_module';
 
 上面代码中，虽然`foo`和`bar`在两个语句中加载，但是它们对应的是同一个`my_module`实例。也就是说，`import`语句是 Singleton 模式。
 
-目前阶段，通过 Babel 转码，CommonJS 模块的`require`命令和 ES6 模块的`import`命令，可以写在同一个模块里面，但是最好不要这样做。因为`import`在静态解析阶段执行，所以它是一个模块之中最早执行的。下面的代码可能不会得到预期结果。
+> **目前阶段，通过 Babel 转码，CommonJS 模块的`require`命令和 ES6 模块的`import`命令，可以写在同一个模块里面，但是最好不要这样做。因为`import`在静态解析阶段执行，所以它是一个模块之中最早执行的。下面的代码可能不会得到预期结果。**
 
 ```js
 require('core-js/modules/es6.symbol');
@@ -406,7 +405,7 @@ import {crc32} from 'crc32'; // 输入
 
 上面代码的两组写法，第一组是使用`export default`时，对应的`import`语句不需要使用大括号；第二组是不使用`export default`时，对应的`import`语句需要使用大括号。
 
-`export default`命令用于指定模块的默认输出。显然，一个模块只能有一个默认输出，因此`export default`命令只能使用一次。所以，import命令后面才不用加大括号，因为只可能唯一对应`export default`命令。
+> **`export default`命令用于指定模块的默认输出。显然，一个模块只能有一个默认输出，因此`export default`命令只能使用一次。所以，import命令后面才不用加大括号，因为只可能唯一对应`export default`命令。**
 
 本质上，`export default`就是输出一个叫做`default`的变量或方法，然后系统允许你为它取任意名字。所以，下面的写法是有效的。
 
@@ -690,13 +689,13 @@ import(`./section-modules/${someVariable}.js`)
   });
 ```
 
-`import()`函数可以用在任何地方，不仅仅是模块，非模块的脚本也可以使用。它是运行时执行，也就是说，什么时候运行到这一句，就会加载指定的模块。另外，`import()`函数与所加载的模块没有静态连接关系，这点也是与`import`语句不相同。`import()`类似于 Node 的`require`方法，区别主要是前者是异步加载，后者是同步加载。
+`import()`函数可以用在任何地方，不仅仅是模块，非模块的脚本也可以使用。它是运行时执行，也就是说，什么时候运行到这一句，就会加载指定的模块。另外，`import()`函数与所加载的模块没有静态连接关系，这点也是与`import`语句不相同。**`import()`类似于 Node 的`require`方法，区别主要是前者是异步加载，后者是同步加载。**
 
 ### 10.2适用场合
 
 下面是`import()`的一些适用场合。
 
-（1）按需加载。
+**（1）按需加载。**
 
 `import()`可以在需要的时候，再加载某个模块。
 
@@ -714,7 +713,7 @@ button.addEventListener('click', event => {
 
 上面代码中，`import()`方法放在`click`事件的监听函数之中，只有用户点击了按钮，才会加载这个模块。
 
-（2）条件加载
+**（2）条件加载**
 
 `import()`可以放在`if`代码块，根据不同的情况，加载不同的模块。
 
@@ -728,7 +727,7 @@ if (condition) {
 
 上面代码中，如果满足条件，就加载模块 A，否则加载模块 B。
 
-（3）动态的模块路径
+**（3）动态的模块路径**
 
 `import()`允许模块路径动态生成。
 
