--- a/javascript/ES6/02.变量的解构赋值.md
+++ b/javascript/ES6/02.变量的解构赋值.md
@@ -18,9 +18,9 @@ ES6 允许写成下面这样。
 let [a, b, c] = [1, 2, 3];
 ```
 
-上面代码表示，可以从数组中提取值，按照对应位置，对变量赋值。
+上面代码表示，可以从数组中提取值，**按照对应位置，对变量赋值**。
 
-本质上，这种写法属于“模式匹配”，只要等号两边的模式相同，左边的变量就会被赋予对应的值。下面是一些使用嵌套数组进行解构的例子。
+本质上，这种写法属于**模式匹配**，只要等号两边的模式相同，左边的变量就会被赋予对应的值。下面是一些使用嵌套数组进行解构的例子。
 
 ```js
 let [foo, [[bar], baz]] = [1, [[2], 3]];
@@ -90,7 +90,7 @@ let [x, y, z] = new Set(['a', 'b', 'c']);
 x // "a"
 ```
 
-事实上，只要某种数据结构具有 Iterator 接口，都可以采用数组形式的解构赋值。
+**事实上，只要某种数据结构具有 Iterator 接口，都可以采用数组形式的解构赋值**。
 
 ```js
 function* fibs() {
@@ -112,8 +112,6 @@ sixth // 5
 
 解构赋值允许指定默认值。
 
-解构赋值允许指定默认值。
-
 ```js
 let [foo = true] = [];
 foo // true
@@ -122,7 +120,7 @@ let [x, y = 'b'] = ['a']; // x='a', y='b'
 let [x, y = 'b'] = ['a', undefined]; // x='a', y='b'
 ```
 
-注意，ES6 内部使用严格相等运算符（`===`），判断一个位置是否有值。所以，只有当一个数组成员严格等于`undefined`，默认值才会生效。
+**注意，ES6 内部使用严格相等运算符（`===`），判断一个位置是否有值。所以，只有当一个数组成员严格等于`undefined`，默认值才会生效**。
 
 ```js
 let [x = 1] = [undefined];
@@ -178,7 +176,7 @@ foo // "aaa"
 bar // "bbb"
 ```
 
-对象的解构与数组有一个重要的不同。数组的元素是按次序排列的，变量的取值由它的位置决定；而对象的属性没有次序，==变量必须与属性同名，才能取到正确的值==。
+对象的解构与数组有一个重要的不同。数组的元素是按次序排列的，变量的取值由它的位置决定；==而对象的属性没有次序，变量必须与属性同名，才能取到正确的值==。
 
 ```js
 let { bar, foo } = { foo: 'aaa', bar: 'bbb' };
@@ -231,7 +229,7 @@ l // 'world'
 let { foo: foo, bar: bar } = { foo: 'aaa', bar: 'bbb' };
 ```
 
-也就是说，对象的解构赋值的内部机制，是先找到同名属性，然后再赋给对应的变量。真正被赋值的是后者，而不是前者。
+**也就是说，对象的解构赋值的内部机制，是先找到同名属性，然后再赋给对应的变量。真正被赋值的是后者，而不是前者。**
 
 ```js
 let { foo: baz } = { foo: 'aaa', bar: 'bbb' };
@@ -436,7 +434,7 @@ s === Boolean.prototype.toString // true
 
 上面代码中，数值和布尔值的包装对象都有`toString`属性，因此变量`s`都能取到值。
 
-解构赋值的规则是，只要等号右边的值不是对象或数组，就先将其转为对象。由于`undefined`和`null`无法转为对象，所以对它们进行解构赋值，都会报错。
+**解构赋值的规则是，只要等号右边的值不是对象或数组，就先将其转为对象。由于`undefined`和`null`无法转为对象，所以对它们进行解构赋值，都会报错**。
 
 ```js
 let { prop: x } = undefined; // TypeError
@@ -513,7 +511,7 @@ move(); // [0, 0]
 
 以下三种解构赋值不得使用圆括号。
 
-（1）变量声明语句
+> （1）变量声明语句
 
 ```js
 // 全部报错
@@ -529,7 +527,7 @@ let { o: ({ p: p }) } = { o: { p: 2 } };
 
 上面 6 个语句都会报错，因为它们都是变量声明语句，模式不能使用圆括号。
 
-（2）函数参数
+> （2）函数参数
 
 函数参数也属于变量声明，因此不能带有圆括号。
 
@@ -540,7 +538,7 @@ function f([(z)]) { return z; }
 function f([z,(x)]) { return x; }
 ```
 
-（3）赋值语句的模式
+> （3）赋值语句的模式
 
 ```js
 // 全部报错
@@ -590,14 +588,12 @@ let y = 2;
 
 ```js
 // 返回一个数组
-
 function example() {
   return [1, 2, 3];
 }
 let [a, b, c] = example();
 
 // 返回一个对象
-
 function example() {
   return {
     foo: 1,
